--- a/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYc/Native/std_TaleWorlds_MountAndBlade_ViewModelCollection_by.xml
+++ b/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYc/Native/std_TaleWorlds_MountAndBlade_ViewModelCollection_by.xml
@@ -7,14 +7,14 @@
   <string id="0Itt3bZM" text="Цяперашняя версія дакумента прывязкі клавішаў састарэла. Прывязкі клавіш былі вернуты да прадвызначаных значэньняў."/>
   <string id="1hlaGzGI" text="Глядзець"/>
   <string id="1hnq3Kb1" text="Вы сапраўды жадаеце скінуць усе налады? Вашыя зьмены будуць страчаныя."/>
-  <string id="2AGvFYk9" text="Каб пачаць місію, вы мусіце мець прынамсі адну пабудову класа {FORMATION_CLASS}."/>
+  <string id="2AGvFYk9" text="Каб пачаць місію, вы мусіце мець прынамсі адно фармаваньне класа {FORMATION_CLASS}."/>
   <string id="4gCU2ykB" text="Скінуць усе ключы да прадвызначаных"/>
   <string id="5Ixsvn3s" text="Паказаць дошку вынікаў"/>
   <string id="61isYVW0" text="Гулец {USER_NAME} ня знойдзены"/>
   <string id="6syoutpV" text="Ад {WHISPER_TARGET}"/>
   <string id="74PKmRWJ" text="Павярнуць Валасы"/>
   <string id="76VR5o8h" text="Вы павінны пачакаць {SECONDS} сякунд да адпраўленьня наступнага паведамленьня."/>
-  <string id="7jhe9cT9" text="Каб зьмяніць тып гэтай пабудовы, трэба мець прынамсі яшчэ адну пабудову такога тыпу."/>
+  <string id="7jhe9cT9" text="Каб зьмяніць тып гэтага фармаваньня, трэба мець прынамсі яшчэ адно фармаваньне гэтага тыпу."/>
   <string id="7XtICVeZ" text="Далёкасьць Агляду"/>
   <string id="82LuSDnd" text="Хуткі Рух Курсора Налева"/>
   <string id="9pCzjSTa" text="{PERCENTAGE}% ад тыпу ваяроў" />
@@ -32,7 +32,7 @@
   <string id="d5SNB0HV" text="Узяць {ITEM_NAME}"/>
   <string id="Dhb2N5JD" text="Націсьніце '{KEY}', каб цыклічна перабіраць каналы"/>
   <string id="DmaP2qaR" text="Тып Скуры"/>
-  <string id="DQvGNQ0g" text="Адсутнічаюць адзінкі пад вашым кантролем."/>
+  <string id="DQvGNQ0g" text="Няма ваяроў, якіх вы можаце кантраляваць."/>
   <string id="DvnRkWQg" text="Перадача Ваяроў {FORMATION_INDEX}"/>
   <string id="eeJcVeQG" text="Канец Фокусу"/>
   <string id="eGuQKRhb" text="Вы пакідаеце гэтую вобласьць!"/>
@@ -75,7 +75,7 @@
   <string id="Sbb8YcJM" text="Скасаваць выбар усіх абраных герояў"/>
   <string id="scnSXrYC" text="Сьцяганосы"/>
   <string id="SfsnlbyK" text="Зьмены ўжыты."/>
-  <string id="SLY8z9fP" text="Абраны ўсе пабудовы!"/>
+  <string id="SLY8z9fP" text="Абраны ўсе фармаваньні!"/>
   <string id="SQpGQzTI" text="Кантролер"/>
   <string id="suyl7WWa" text="Сьцяг не экіпіяваны"/>
   <string id="trPyg7mr" text="Баявая Мараль" />
