--- a/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYc/Native/std_common_strings_xml_by.xml
+++ b/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYc/Native/std_common_strings_xml_by.xml
@@ -124,7 +124,7 @@
   <string id="5j6mIuu1" text="Што? Я не разумею."/>
   <string id="5k4dxUEJ" text="Ваяры"/>
   <string id="5LpufKs7" text="Ідзіце Ўьслед за Мной"/>
-  <string id="5n4rWI9T" text="{.Muzcynski}Шыпаты Шалом з Маскай"/>
+  <string id="5n4rWI9T" text="{.Muzcynski}Шалом са Сьпічаком і Маскай"/>
   <string id="5nEh20ju" text="Васілопс"/>
   <string id="5rj7xQE4" text="Лук"/>
   <string id="5siAbi69" text="Му Тарэрэ"/>
@@ -154,7 +154,7 @@
   <string id="7dAy51ln" text="{.Muzcynski}Цэрвельер над Збройным Коіфам"/>
   <string id="7EAEIUIY" text="{.Zanocy}Цяжкая Кальцавая Кальчуга"/>
   <string id="7HbspP6x" text="{.Zanocy}Зграбная Лускатая Кальчуга Легіянера"/>
-  <string id="7k9izAvC" text="Скальдэрброда"/>
+  <string id="7k9izAvC" text="Скольдэрбруда"/>
   <string id="7LmUe8fQ" text="{.Muzcynski}Менавліён"/>
   <string id="7MkoLtWC" text="{.Zanocy}Сякера"/>
   <string id="7Q8ufo5X" text="Караблі"/>
@@ -176,7 +176,7 @@
   <string id="8uBew3nD" text="{.Muzcynski}Шыпаваныя Поручы"/>
   <string id="8UBfIenN" text="Нармальн."/>
   <string id="8UJ3cPrZ" text="Мізэя дала сваю назву Майзэяду, багатай узгорыстай краіне на ўсходне-цэнтральнай частцы Імперыі. Гэты рэгіён - месца стаянак людзей, ён належаў сенатару Літаўсу, які адносна мірна падначаліў Імперыі палайскія плямёны, прапанаваўшы ім абарону ад стэпавых налётнікаў. Аднак, калі ён трапіў пад удар сваіх супернікаў у Сенаце, ён паспрабаваў арганізаваць іх у канкурэнтную 'барбарскую' рэспубліку наўзор старажытнай кальрадыйскай. Імперыя зьнішчыла яе, але тутэйшыя жыхары, зараз ужо цалкам кальрадызаваныя, усё яшчэ захоўваюць прыхільнасьць да старой рэспубліканскай сістэмы і яе прыхільнікаў."/>
-  <string id="8ZNOgT8Z" text="{BONUS_AMOUNT}% да шкоды блізкага бою ваярам вашай пабудовы."/>
+  <string id="8ZNOgT8Z" text="{BONUS_AMOUNT}% да шкоды блізкага бою ваярам фармаваньня, якім вы кіруеце."/>
   <string id="915frsPd" text="Корэна"/>
   <string id="927d3urB" text="{.Muzcynski}Драўляны Авальны Шчыт"/>
   <string id="9aboazgu" text="Лінія"/>
@@ -188,7 +188,7 @@
   <string id="9Eyd2qGo" text="{.Mnozny}Узмоцненыя Замшавыя Боты"/>
   <string id="9FgxK9se" text="{.Muzcynski}Высокі Шалом"/>
   <string id="9pgOGq7X" text="Журнал"/>
-  <string id="9RZLSV3E" text="{BONUS_AMOUNT}% шкода для ваяроў блізкага бою ў вашай пабудове супраць вершнікаў."/>
+  <string id="9RZLSV3E" text="{BONUS_AMOUNT}% шкода для ваяроў блізкага бою супраць вершнікаў у фармаваньні, якім вы кіруеце."/>
   <string id="9sokmYMZ" text="Падмос"/>
   <string id="9TGLirQf" text="Кола"/>
   <string id="9xyXdX4I" text="Тарос"/>
@@ -357,7 +357,7 @@
   <string id="customgametitle" text="Мапа"/>
   <string id="CvVJyKYA" text="Тэлея"/>
   <string id="cZIhxH9e" text="Пакарыёс"/>
-  <string id="cZNA5Z6l" text="Пабудова {NUMBER}"/>
+  <string id="cZNA5Z6l" text="Фармаваньне {NUMBER}"/>
   <string id="cZzfNlxd" text="Восень"/>
   <string id="d0kbtGYn" text="Вам бракуе золата."/>
   <string id="D0SX1cFQ" text="Леў"/>
@@ -418,7 +418,7 @@
   <string id="EJZLzhJk" text="Санеопа разьмешчана на нізкім перавале, што вядзе з даліны Нэвіс на поўнач да басейна Афтыс. Старажытныя палайскія народы гэтага края, напрыклад Баттанійцы, ставіліся да азёраў як да сьвятых месцаў, а Афтыс, у прыватнасьці, лічыўся брамаю ў тагасьвет. Шум і мітусьня Санеопы, аднаго з галоўных гандлёвых цэнтраў унутранай часткі Кальрадыі, рэзка кантрастуюць з цёмнымі і ціхімі водамі ўнізе."/>
   <string id="ekcBrNN1" text="Эрен"/>
   <string id="ELsDFwAD" text="Віно{@Plural}амфараў віна{\@}"/>
-  <string id="eMbuGGus" text="Абярыце ваяроў пабудовы."/>
+  <string id="eMbuGGus" text="Абярыце ваяроў фармаваньня."/>
   <string id="empirefaction" text="Імперыя"/>
   <string id="EmVbbIUc" text="Вярнуцца"/>
   <string id="eN1eFdhF" text="{.Zanocy}Упрыгожаная Скураная Запрэжка над Лускатай"/>
@@ -491,7 +491,7 @@
   <string id="fwxHsC1h" text="{.Muzcynski}Кароткі Гамбезон над Тунікай"/>
   <string id="FxnFBhrF" text="{.Muzcynski}Шчыт-Кропля Вершніка"/>
   <string id="G0AWk1rX" text="Лесьвіца"/>
-  <string id="g0l7W5xQ" text="{BONUS_AMOUNT}% да хуткасьці руху вершнікам вашай пабудовы."/>
+  <string id="g0l7W5xQ" text="{BONUS_AMOUNT}% да хуткасьці руху вершнікам фармаваньня, якім вы кіруеце."/>
   <string id="g51zVsKU" text="{.Mnozny}Кальчужныя Міценкі"/>
   <string id="g5BPd0Oc" text="{.Muzcynski}Тканы Коіф"/>
   <string id="G7AEWZ6c" text="{.Muzcynski}Упрыгожаны Авальны Шчыт"/>
@@ -514,7 +514,7 @@
   <string id="GPESFoWD" text="Анагр"/>
   <string id="gsVtO9A7" text="Рушэньне"/>
   <string id="GTaxqBcv" text="{.Zanocy}Браня Аўксілія"/>
-  <string id="Gu0Wxxul" text="{BONUS_AMOUNT}% штраф трапнасьці для ваяроў далёкага бою ў вашай пабудове."/>
+  <string id="Gu0Wxxul" text="{BONUS_AMOUNT}% штраф трапнасьці для ваяроў далёкага бою ў фармаваньні, якім вы кіруеце."/>
   <string id="guardnoun" text="Вартавы"/>
   <string id="gUTqDROO" text="{.Muzcynski}Закрыты Галаўны Шаль"/>
   <string id="GWaJ7Ksq" text="Ёкулос"/>
@@ -672,7 +672,7 @@
   <string id="KjzJjj5n" text="Эроніс"/>
   <string id="kkUQObZn" text="Пустэльныя Бандыты"/>
   <string id="KKWEkA4P" text="{.Zanocy}Грубая Скура Мядзьведзя"/>
-  <string id="klGEDUmw" text="{BONUS_AMOUNT}% да шкоды супраць шчытоў ваярам вашай пабудовы."/>
+  <string id="klGEDUmw" text="{BONUS_AMOUNT}% да шкоды супраць шчытоў ваярам фармаваньня, якім вы кіруеце."/>
   <string id="kmdjRAoG" text="{.Muzcynski}Шнураваны Тканы Коіф"/>
   <string id="koX9okuG" text="Нічога"/>
   <string id="KoyU5yeY" text="{.Muzcynski}Упрыгожаны Бронзавы Каўпак з Махрамі і Абаронай Шчок"/>
@@ -693,7 +693,7 @@
   <string id="L7wn49Uz" text="Дыпламатыя"/>
   <string id="l91l1TJo" text="{.Muzcynski}Каляровы Турбан"/>
   <string id="L9weGfoX" text="Салея"/>
-  <string id="labbKop6" text="{BONUS_AMOUNT}% да шкоды далёкага бою ваярам вашай пабудовы."/>
+  <string id="labbKop6" text="{BONUS_AMOUNT}% да шкоды далёкага бою ваярам фармаваньня, якім вы кіруеце."/>
   <string id="lAWwcO6b" text="Вландыйскае Каралеўства"/>
   <string id="lB4UF1GT" text="{.Zanocy}Доўгая Туніка"/>
   <string id="Lbm7asY3" text="{.Muzcynski}Высокі Трохкутны Шчыт"/>
@@ -793,7 +793,7 @@
   <string id="NOchnEwX" text="Гузід"/>
   <string id="nOMT0Cw6" text="Зьніжаны Маральны Шок"/>
   <string id="NqarFr4P" text="Налады"/>
-  <string id="nqWulUTP" text="{BONUS_AMOUNT}% да хуткасьці руху пяхоце вашай пабудовы."/>
+  <string id="nqWulUTP" text="{BONUS_AMOUNT}% да хуткасьці руху пяхоце фармаваньня, якім вы кіруеце."/>
   <string id="nSoJkeBI" text="Сітакея"/>
   <string id="NSSsxBHV" text="Выпадкаваць"/>
   <string id="NT5fwUuJ" text="Пераход Уброд"/>
@@ -834,7 +834,7 @@
   <string id="OpYdqPWs" text="{.Muzcynski}Адкрыты Кальчужны Коіф"/>
   <string id="oQSZ0XgP" text="{.Zanocy}Упрыгожаная Тлустая Туніка"/>
   <string id="OrEgjXZ1" text="{.Zanocy}Грубая Кручаная Куфія"/>
-  <string id="ORFrCYSn" text="{BONUS_AMOUNT}% да шкоды атак блізкага бою ваярам вашай пабудовы."/>
+  <string id="ORFrCYSn" text="{BONUS_AMOUNT}% да шкоды атак блізкага бою ваярам фармаваньня, якім вы кіруеце."/>
   <string id="oUz16Nav" text="Скінуць Падказкі"/>
   <string id="OVcoYxj1" text="Назва Сэрвера"/>
   <string id="OvlG2Vu1" text="{.Zanocy}Грубая Брыганціна"/>
@@ -843,7 +843,7 @@
   <string id="oZrVNUOk" text="Памылка"/>
   <string id="p0hcyZdp" text="Зенон"/>
   <string id="p0JFbL7G" text="Зьніжаная Атрыманая Шкода ад Атак Далёкага Бою"/>
-  <string id="P3IWytsr" text="Пабудова зараз пустая"/>
+  <string id="P3IWytsr" text="Фармаваньне зараз пустое"/>
   <string id="P3rMg4uZ" text="Бок Гульца"/>
   <string id="p6NIgRpk" text="{.Zanocy}Грубая Хаваючая Шапка"/>
   <string id="p6QNVu8p" text="Флот"/>
@@ -1886,7 +1886,7 @@
   <string id="Vxt0xTvV" text="Мавея"/>
   <string id="VylHwqVq" text="{.Muzcynski}Сегментаваны Скалкэп над Шнураваным Коіфам"/>
   <string id="VzhbUL60" text="Вендэлія"/>
-  <string id="W0agPHes" text="{BONUS_AMOUNT}% да штрафу маралі ад сьмерці ваярам вашай пабудовы."/>
+  <string id="W0agPHes" text="{BONUS_AMOUNT}% да штрафу маралі ад сьмерці ваярам фармаваньня, якім вы кіруеце."/>
   <string id="W1uwgvAQ" text="Арыён"/>
   <string id="W2WXkiAh" text="Пасярэднік-Выкупнік"/>
   <string id="W4iKIM2s" text="Маленькі Шчыт"/>
@@ -2003,7 +2003,7 @@
   <string id="yfa7tpbK" text="Усе"/>
   <string id="yFl9N7wz" text="Узяць"/>
   <string id="yG3YUySN" text="Заходняя Імперыя"/>
-  <string id="ygfhbfr0" text="{.Muzcynski}Шыпаты Шалом"/>
+  <string id="ygfhbfr0" text="{.Muzcynski}Шалом са Сьпічаком"/>
   <string id="ygJkPxyc" text="Горад Адох месьціцца ў падножжа Когі Рогіні, гары Сьвітанку. Адзін з самых аддаленых гарадоў Дэўсага, ён, па паданьні, быў прыстанкам Гаспадара Аггака, міфічнага тырана, з плячэй якога сьцякалі зьмеі. Нават сёньня Когі Рогіні мае рэпутацыю месца чорнай магіі і таямніцаў, што дапамагае трымаць чужынцаў на адлегласьці. Горад паў падчас заваёў Хузаітаў ад клана Харфіт, які зьмяшаўся з горнымі народамі, паважае іх звычаі, бярэ ўдзел у іх рытуалах і захоўвае іх сакрэты."/>
   <string id="YGQ6UXCo" text="{.Muzcynski}Горны Паляўнічы Лук"/>
   <string id="Yh7Dorsr" text="{.Zanocy}Паласатая Скураная Запрэжка"/>
@@ -2029,7 +2029,7 @@
   <string id="Yvk8a2tb" text="Праца Нагамі"/>
   <string id="YxglkaXU" text="{.Muzcynski}Белы Табард над Кальчужным Гаўберкам"/>
   <string id="YYYxOiCq" text="Ампрэла - галоўны горад на крайнім паўночным усходзе Імперыі. На яго вежах стаяць дазорныя, выглядваючы сігнальныя агні памежных замкаў поўначы, усхода і захада, якія могуць апавясьціць пра набліжэньне налётнікаў. Конныя лучнікі, набраныя з грубых элефтэройскіх вольнаадпушчанікаў, п'юць у ваярнях, чакаючы загаду выехаць супраць стэпавых вершнікаў. Катафракты праходзяць праз браму горада, каб супернічаць з князямі Стургіі за кантроль над гандлем праз суседнюю сетку азёраў, вядомую як парталы Ільтан."/>
-  <string id="Z2xgnrDa" text="{BONUS_AMOUNT}% да шкоды наездам вершнікам вашай пабудовы."/>
+  <string id="Z2xgnrDa" text="{BONUS_AMOUNT}% да шкоды наездам вершнікам фармаваньня, якім вы кіруеце."/>
   <string id="z3VamNrX" text="Адправіць сваіх ваяроў."/>
   <string id="Z54ZrDG9" text="Тады, да сустрэчы."/>
   <string id="Z6Ak3H6G" text="{.Muzcynski}Джарэйд"/>
