--- a/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYc/Native/std_module_strings_xml_by.xml
+++ b/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYc/Native/std_module_strings_xml_by.xml
@@ -204,7 +204,7 @@
     <string id="7j4fQHg7" text="Лясная Бітва{newline}{newline}• Пяхота атрымлівае маленькі бонус.{newline}• Лучнікі атрымліваюць сярэдні штраф.{newline}• Вершніца атрымлівае вялікі штраф.{newline}• Конныя Лучнікі атрымліваюць люты штраф." />
     <string id="7JpAR59k" text="Ужываецца для перавозкі грузаў" />
     <string id="7llkDelg" text="Пастановы Гаспадарства" />
-    <string id="7mRN2br0" text="Лідарства над пабудовай перададзена {HERO_NAME}." />
+    <string id="7mRN2br0" text="Лідарства над фармаваньнем перададзена да {HERO_NAME}." />
     <string id="7MSuWxaY" text="{CHILD.NAME} {?CHILD.GENDER}дасягнула{?}дасягнуў{\?} {CHILD.AGE} гадоў і мае патрэбу ў радзе." />
     <string id="7MWaMaez" text="Вось што мы маем: {ITEM_LIST}. Забірайце гэтае, але пакіньце нашыя жыцьці." />
     <string id="7oJ9gIeT" text="У гандляра бракуе грошаў." />
@@ -233,7 +233,7 @@
     <string id="8bSHlWBL" text="У гэтым горадзе зараз не праходзяць турніры." />
     <string id="8c8NDpAd" text="{HERO.NAME} {?HERO.GENDER}атрымала{?}атрымаў{\?} асаблівасьць {TRAIT_NAME}." />
     <string id="8cY08v3s" text="Гэтая вёска сярэдняга багацьця. Людзі і жывёлы выглядаюць сытымі. Вяскоўцы рупліва выконваюць сезонную працу. " />
-    <string id="8fLMcFFG" text="{DAY_OF_YEAR} {YEAR} году. Вы разгарнулі сьцяг цмока і абвясьцілі сваю місію па {?PLAYER_WANTS_RESTORE}аднаўленьню{?}разбурэньню{\?} Імперыі." />
+    <string id="8fLMcFFG" text="{DAY_OF_YEAR} {YEAR} году. Вы разгарнулі цмачыны сьцяг і абвясьцілі свой намер {?PLAYER_WANTS_RESTORE}аднавіць{?}разбурыць{\?} Імперыі." />
     <string id="8geYNpC9" text="{THRUST_DAMAGE_TYPE} Шкода Снарада:" />
     <string id="8Gh3Waa3" text="жонка" />
     <string id="8iLzK3Y4" text="Прыбытак Каравана і Партыі" />
@@ -264,7 +264,7 @@
     <string id="9FhdRKWu" text="Кідальны Нож" />
     <string id="9gNjg4P0" text="Гэта не захавае вашую гульню, але верне вас у галоўнае меню. Вы ўпэўнены, што жадаеце выйсьці?" />
     <string id="9iycVtyV" text="Хуткасьць Вывучэньня: x {COUNT}" />
-    <string id="9Lhd2zVW" text="{DAY_OF_YEAR} {YEAR} году. Вы знайшлі трэцьцю частку Сьцяга Цмока і гатовы разгарнуць яго зноў." />
+    <string id="9Lhd2zVW" text="{DAY_OF_YEAR} {YEAR} году. Вы знайшлі трэцьцю частку Цмачынага Сьцяга і гатовы разгарнуць яго зноў." />
     <string id="9NjDfz5Z" text="({LEFT} / {RIGHT})" />
     <string id="9PLNQrWw" text="Вы чуеце мала скаргаў, і людзі, здаецца, давяраюць уладам." />
     <string id="9pwIt4aa" text="Воск{@Plural}адзінак воску{\@}" />
@@ -346,7 +346,7 @@
     <string id="AtulqwTG" text="Зьмяніць Лідара Партыі" />
     <string id="AUDv8sEt" text="Актыўная Праблема" />
     <string id="aUNYlvbN" text="Вы прыбылі ў вёску {SETTLEMENT}, каб разрабаваць яе. Некаторыя жыхары сабраліся, каб даць адпор." />
-    <string id="AUOio5Tu" text="Штодзённае Прадвызначанае" />
+    <string id="AUOio5Tu" text="Штодзённы Занятак" />
     <string id="AVQUGwTg" text="Горад сярэдняга багацьця." />
     <string id="AWW0T6xR" text="Пешка можа перасоўвацца артаганальна на адну плітку за раз.{newline}Пешку нельга перасунуць назад на плітку, зь якой яна прыйшла ў папярэдні крок.{newline}Калі гулец ня можа рухацца, ён можа прыбраць адну з пешак апанента і ўсё адно зрабіць крок." />
     <string id="aY2SKxqG" text="Рабуйце іх вёскі!" />
@@ -411,7 +411,7 @@
     <string id="bNoCJyi9" text="Шляхетнасьць" />
     <string id="bO5kjF3G" text="Сумленнасьць:" />
     <string id="BObPGFCw" text="Узяць і Экіпіяваць" />
-    <string id="bPCAdgLs" text="Абярыце пабудову, каб узначаліць" />
+    <string id="bPCAdgLs" text="Абярыце фармаваньне, каб узначаліць" />
     <string id="BPVFAl7J" text="Нашы план - атакаваць усімі сіламі каля нашай пяхоты." />
     <string id="BPVmRxrA" text="Сфармаваць Хаўрус з {FACTION}" />
     <string id="bPXvukDs" text="Рух і Захоп" />
@@ -546,7 +546,7 @@
     <string id="dxtuFW8b" text="Вы нядрэнна пабіліся. Паказалі некалькі добрых хадоў. Зразумела, зьдзейсьнілі некалькі памылак, але, пэўна, падаяце надзею. І заслужылі ўзнагароду {PRIZE}{GOLD_ICON} за перамогу над {OPPONENT_COUNT} апанентамі." />
     <string id="DyarV8i7" text="Гэтая палітыка ўжо мае прапанаваную пастанову." />
     <string id="dyLYsWPf" text="Бонус Перавагі Забесьпячэньне Наяўнасьці" />
-    <string id="dyY3hkH1" text="{TROOP_NAMES_BEGIN}{?IS_PLURAL} і {?}{\?}{TROOP_NAMES_END} атакуюць {?IS_PLURAL}розныя варожыя пабудовы{?}варожую пабудову{\?}." />
+    <string id="dyY3hkH1" text="{TROOP_NAMES_BEGIN}{?IS_PLURAL} і {?}{\?}{TROOP_NAMES_END} атакуюць {?IS_PLURAL}розныя варожыя фармаваньні{?}варожае фармаваньне{\?}." />
     <string id="Dzntsudy" text="Вы нанесьлі {AMOUNT} {DAMAGE_TYPE} шкоды {VICTIM_NAME} ({LOST_HP_PERCENTAGE}% ачкоў удару)." />
     <string id="E05lmb5n" text="Вашыя адносіны з {HERO_NAME} будуць &lt;a style=&quot;DecreaseStyle&quot; &gt;&lt;b&gt;пагоршаны&lt;/b&gt;&lt;/a&gt;" />
     <string id="E0lb2Z2r" text="{DAY_OF_YEAR} {YEAR} году. Змове супраць Імперыі удалося з'яднаць сваіх ворагаў, войскі гаспадарстваў {FACTION_NAMES} пачалі ваяваць разам." />
@@ -755,12 +755,12 @@
     <string id="hE4XvvXv" text="Сартаваць па:" />
     <string id="HEQ2zEei" text="Скасаваць" />
     <string id="HEUDyfbG" text="{HERO.NAME} далучаецца да {CLAN_NAME}" />
-    <string id="hEWuE0Ch" text="Вы камандзір, таму зможаце загадваць усім пабудовам падчас бою." />
+    <string id="hEWuE0Ch" text="Вы камандзір, таму можаце загадваць усім фармаваньням падчас бою." />
     <string id="hfSW9FTN" text="Зброя Далёкага Бою V" />
     <string id="hJypvWMR" text="Палепшыць" />
     <string id="HKrCB1Pa" text="Можа Прабіваць Блок" />
     <string id="HkZ4E94O" text="Канфедэрацыя стэпавых плямёнаў Хузаітаў раней вяла качавы лад жыцьця, але нядаўна пасялілася на ўсходняй мяжы Імперыі і паступова ператвараецца ў аграрнае грамадства са сталымі цэнтрамі-гарадамі. Нягледзячы на гэтае, яны па-ранейшаму захоўваюць шматлікія асьпекты свайго качавога жыцьця, у тым ліку блізкасьць да каней. Яны майстры коннай стральбы з лука, страляючы і ўцякаючы з зоны дасягальнасьці." />
-    <string id="hL3JIQbd" text="Узначаліць гэтую пабудову ў боі." />
+    <string id="hL3JIQbd" text="Узначаліць гэтае фармаваньне ў боі." />
     <string id="Hlusn1gG" text="Назва клана ўтрымлівае недапушчальныя знакі." />
     <string id="HmbvM9Na" text="Жадаеце прапусьціць цяперашні матч?" />
     <string id="HMgrtLYa" text="Вашы чэмпіён прайграў дуэль. Вашае войска расчаравана гэтай паразай. Вашая партыя губляе мараль." />
@@ -810,7 +810,7 @@
     <string id="IF7zS5ia" text="Вы перавысілі ліміт палонных.{newline}Часова вы зможаце ўтрымліваць сваіх палонных, але праз пэўны час яны пачнуць хутка зьбягаць з вашай партыі. Таксама вы будзеце запаволены.{newline}Вы ўпэўнены?" />
     <string id="iffbWGBa" text="Цётка" />
     <string id="iFg5N7r3" text="Аднаручная Зброя" />
-    <string id="ihVHfUFT" text="Пабудова" />
+    <string id="ihVHfUFT" text="Фармаваньне" />
     <string id="iIBqTcKx" text="Атакі могуць зьбіваць з ног ворагаў" />
     <string id="iisvVbDI" text="Купіць усё" />
     <string id="IiyN5krb" text="{TRAIT_NAME} ({TRAIT} {TRAIT_VALUE}){newline}{TRAIT_DESCRIPTION}" />
@@ -921,7 +921,7 @@
     <string id="kHC5EjEJ" text="Бонус Малой Фракцыі" />
     <string id="Khr5yETv" text="Асэраі - жыхары пустэльні Нахаса, сумесь качавых бедуінаў і аселых земляробаў з аазісаў. Яны вядомыя сваім майстэрствам коннай язды і ведамі шматлікіх краін, асабліва медыцынай, атрыманымі дзякуючы знаходжаньню на самых прыбытковых гандлёвых шляхах кантынента. Кожны клан люта ганарыцца сваім паходжаньнем і часта зайздросьціць іншым, але калі іх яднае харызматычны лідар, яны робяцца галоўнай сілай на поўдні." />
     <string id="KiVCv1Bx" text="Бярэ ў аблогу {SETTLEMENT_NAME}" />
-    <string id="KJDqOGEU" text="Нашы план - вярнуцца ў пабудовы, каб змагацца ў іншы дзень." />
+    <string id="KJDqOGEU" text="Нашы план - вярнуцца да фармаваньня, каб змагацца ў іншы дзень." />
     <string id="KkaVpLXd" text="Абмеркаваць прыняцьце гэтай палітыкі (Падтрымка: {SUPPORT}%)" />
     <string id="KkwLUO3o" text="шосты" />
     <string id="klZnvb15" text="Персанаж" />
@@ -1390,7 +1390,7 @@
     <string id="Svem1NiV" text="Вашы апанент зьнепрытомеў, і вы перамаглі!" />
     <string id="svnxJA0L" text="{HERO} ня мае дастатковага {SKILL} навыку, каб стварыць гэтую зброю." />
     <string id="switchToNextElement" text="Пераключыць" />
-    <string id="SwY4YLMY" text="Сьцяг Цмока зноў высока разьвіваецца." />
+    <string id="SwY4YLMY" text="Цмачыны Сьцяг зноў высока разьвіваецца." />
     <string id="SydDh9jf" text="Вы атрымалі {COUNT} {ITEM} ад {HERO.NAME}." />
     <string id="SYm7rgCX" text="{COMPANION.LINK} {?COMPANION.GENDER}пакінула{?}пакінуў{\?} вашую партыю." />
     <string id="szSjkkyl" text="Мы павінны абраць наступны аб'ект." />
@@ -1669,7 +1669,7 @@
     <string id="YMIFqVOk" text="Вы ўпэўнены, што жадаеце здацца? Усе вашыя ваяры будуць страчаныя!" />
     <string id="YNND0kc9" text="Абароненыя Дзіды з Крукамі" />
     <string id="yNyQ3RFa" text="{HERO.NAME} памерла пры родах." />
-    <string id="yOJAiSf4" text="Без пабудовы" />
+    <string id="yOJAiSf4" text="Без Фармаваньня" />
     <string id="YOSEIvyf" text="Кіруемасьць: " />
     <string id="yQiDdDPY" text="Лёгкі Конь" />
     <string id="yRQDL2ab" text="Гарнізон:" />
@@ -1686,7 +1686,7 @@
     <string id="yVLv2Q23" text="Дзеяць" />
     <string id="YvwQL9aa" text="Вага: " />
     <string id="yWD4Nwy2" text="Мы мусім дапамагчы нашым хаўрусьнікам." />
-    <string id="YxEcX6pS" text="{DAY_OF_YEAR} {YEAR} году. Вы знайшлі другую частку Сьцяга Цмока Кальрадыёса." />
+    <string id="YxEcX6pS" text="{DAY_OF_YEAR} {YEAR} году. Вы знайшлі другую частку Цмачынага Сьцяга Кальрадыёса." />
     <string id="YxKHEUEX" text="Турнір скончаны. {TOURNAMENT_FINAL_PARTICIPANT_A} {?TOURNAMENT_FINAL_PARTICIPANT_A.GENDER}перамагла{?}перамог{\?} {TOURNAMENT_FINAL_PARTICIPANT_B} у фінальным раўндзе. Вы выбылі ў раўндзе {TOURNAMENT_ELIMINATED_ROUND}." />
     <string id="YYdPfXEP" text="Таблут - гэта гульня нападнікаў (чорных) супраць абаронцаў (белых).{newline}Нападнікаў болей, чым абаронцаў, але абаронцам для перамогі ня трэба захопліваць. Іх асноўная мэта - засьцерагчы свайго гаспадара (цэнтральную пешку).{newline}Гаспадар гуляе па тым жа правілам руху і ўзяцьця, што і іншыя пешкі." />
     <string id="YYvzM5Dh" text="Скінуць Усё" />
