--- a/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYc/SandBoxCore/std_spitems_xml_by.xml
+++ b/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYc/SandBoxCore/std_spitems_xml_by.xml
@@ -273,6 +273,7 @@
     <string id="tVyuxl8e" text="{.Zanocy}Ірваная Роба" />
     <string id="tXbRb3QO" text="{.Zanocy}Шыпаваная Футравая Браня" />
     <string id="U7WGaQ45" text="{.Zanocy}Па-майстэрску Зробленая Паўднёвая Луската над Ланцуговым Гаўберкам" />
+    <string id="uZYqmBST" text="{.Zanocy}Чэрненая Броня" />
     <string id="U8QfF3Gw" text="{.Zanocy}Доўгая Ваўняная Туніка" />
     <string id="v4THTk5O" text="{.Muzcynski}Каптан са Скураным Поясам" />
     <string id="v6W9XaDI" text="{.Zanocy}Старая Футравая Браня" />
@@ -345,7 +346,7 @@
     <string id="51EcVnzd" text="{.Muzcynski}Шалом з Заслонай над Шнураваным Коіфам" />
     <string id="5c4cHL9Z" text="{.Zanocy}Хузаіцкая Баявая Карона" />
     <string id="5kAqcWac" text="{.Muzcynski}Футравы Аблямаваны Шалом з Каштоўнасьцямі" />
-    <string id="5n4rWI9T" text="{.Muzcynski}Шыпаты Шалом з Маскай" />
+    <string id="5n4rWI9T" text="{.Muzcynski}Шалом са Сьпічаком з Маскай" />
     <string id="6Dk7LClc" text="{.Muzcynski}Багаты Турбан над Шаломам" />
     <string id="6n44BIll" text="{.Muzcynski}Завостраны Скалкэп над Шнураваным Коіфам" />
     <string id="77RIGK7B" text="{.Muzcynski}Кальчужны Коіф" />
@@ -453,7 +454,7 @@
     <string id="n1A47HcZ" text="{.Muzcynski}Шляхетны Шалом Улана" />
     <string id="N3SgmNxe" text="{.Muzcynski}Галаўны Шаль" />
     <string id="n7c7tnx9" text="{.Muzcynski}Шалом Вайскавода з Абаронай Носа" />
-    <string id="NB9bQt6O" text="{.Muzcynski}Шыпаты Шалом з Адкрытым Турбан" />
+    <string id="NB9bQt6O" text="{.Muzcynski}Шалом са Сьпічаком і Адкрытым Турбанам" />
     <string id="ndfDy5B8" text="{.Mnozny}Закручаныя Галаўныя Абгорткі" />
     <string id="NEupkuqV" text="{.Zanocy}Пустэльная Хустка" />
     <string id="NhDpFjF0" text="{.Muzcynski}Узмоцнены Закрыты Шалом з Абаронай Вачэй" />
@@ -506,7 +507,7 @@
     <string id="SV1pTR2P" text="{.Muzcynski}Мяккі Коіф" />
     <string id="SVTa5spB" text="{.Zanocy}Закрытая Сталёвая Шапка" />
     <string id="SYvBTD0p" text="{.Muzcynski}Поўны Шлем над Галаўнымі Абкруткамі" />
-    <string id="T6ObiB5P" text="{.Muzcynski}Шыпаты Шалом над Закрытым Турбанам" />
+    <string id="T6ObiB5P" text="{.Muzcynski}Шалом са Сьпічаком над Закрытым Турбанам" />
     <string id="TFT2Xapz" text="{.Muzcynski}Востраканцовы Шалом над Мяккай Тканьню" />
     <string id="tMLH04n4" text="{.Muzcynski}Капалін-Капялюх над Кальчужным Коіфам" />
     <string id="Tp7zXWGa" text="{.Muzcynski}Шалом з Наносьнікам над Мяккім Коіфам" />
@@ -553,12 +554,13 @@
     <string id="X1Wn0sBa" text="{.Muzcynski}Cкураны Шыпаваны Шлем над Грубай Лускатай" />
     <string id="XCnUaINR" text="{.Muzcynski}Бронзавы Назальхельм над Кальчугай" />
     <string id="xJTfOqD6" text="{.Muzcynski}Шалом Катафракта з Абаронай Вачэй" />
+    <string id="XrsKuPT5" text="{.Muzcynski}Чэрнены Каптур" />
     <string id="xnoAJwoy" text="{.Muzcynski}Поўны Шлем над Мяккай Тканьню" />
     <string id="xTH3z9Sr" text="{.Muzcynski}Шпангенхэльм над Скураю" />
     <string id="XuwQvSDo" text="{.Muzcynski}Жалезны Круглы Капалін над Кальчугай" />
     <string id="YDibTDob" text="{.Zanocy}Горная Карона-Шалом" />
     <string id="YFg8x5QC" text="{.Muzcynski}Аздоблены Пёрамі Шпангенхэльм над Коіфам" />
-    <string id="ygfhbfr0" text="{.Muzcynski}Шыпаты Шалом" />
+    <string id="ygfhbfr0" text="{.Muzcynski}Шалом са Сьпічаком" />
     <string id="yMi4ijgI" text="{.Muzcynski}Мяккі Каптур Качэўніка" />
     <string id="YQd9C8u2" text="{.Muzcynski}Капалін над Мяккім Коіфам" />
     <string id="YqhOxb1Z" text="{.Muzcynski}Апераны Ламелярны Шалом" />
@@ -629,7 +631,7 @@
     <string id="kKuVy1jT" text="{.Muzcynski}Хамсін{@Plural}Коней Хамсін{\@}" />
     <string id="Kp9kslko" text="{.Muzcynski}Даршыйскі Конь{@Plural}Даршыйскіх Коней{\@}" />
     <string id="lULBZ714" text="Алей{@Plural}амфараў алею{\@}" />
-    <string id="LzlQUcak" text="{.Muzcynski}Узмоцнены Кальчужны Бард" />
+    <string id="LzlQUcak" text="{.Muzcynski}Ламелярны Бард" />
     <string id="lZZOQsxc" text="{.Nijaki}Грубае Сядло Вершніка" />
     <string id="meARhlZC" text="{.Muzcynski}Валанбійскі Курсер{@Plural}Валанбійскіх Курсераў{\@}" />
     <string id="MedDPUNh" text="{.Muzcynski}Дэстрыер{@Plural}Дэстрыераў{\@}" />
@@ -677,7 +679,6 @@
     <string id="Wj98Otmo" text="{.Muzcynski}Стэпавы Чарджэр{@Plural}Стэпавых Чарджэраў{\@}" />
     <string id="WSk5Sibs" text="Сыр{@Plural}бондаў сыру{\@}" />
     <string id="WVqaRKUm" text="Поўсьць{@Plural}адзінак поўсьці{\@}" />
-    <string id="XkwOTdVQ" text="{.Muzcynski}Кельцкі Мароз" />
     <string id="xsu6bPTv" text="Лён{@Plural}мяхоў ільну{\@}" />
     <string id="Yh7Dorsr" text="{.Zanocy}Паласатая Скураная Запрэжка" />
     <string id="yQTBY9ie" text="Каштоўнасьці{@Plural}адзінак каштоўнасьцяў{\@}" />
@@ -704,6 +705,7 @@
     <string id="FQqaVHq2" text="{.Mnozny}Боты Лесьніка" />
     <string id="Ga5mCiLp" text="{.Mnozny}Скураныя Боты Вершніка" />
     <string id="IOOTPpYj" text="{.Mnozny}Футравыя Аблямаваныя Скрыўленыя Боты" />
+    <string id="iqaRjMhe" text="{.Mnozny}Чэрненыя Боты" />
     <string id="J00AF9Qv" text="{.Mnozny}Сатканыя Скураныя Боты" />
     <string id="jVK5B86k" text="{.Mnozny}Футравыя Боты" />
     <string id="Kgnm0FkE" text="{.Mnozny}Скураныя Туфлі" />
@@ -744,6 +746,8 @@
     <string id="cXesETQJ" text="{.Zanocy}Велізарная Адарга" />
     <string id="dacwWKE2" text="{.Muzcynski}Зношаны Шчыт-Кропля" />
     <string id="dbbwszHd" text="{.Muzcynski}Упрыгожаны Круглы Шчыт" />
+    <string id="djSq8yL0" text="{.Muzcynski}Кутны Шчыт-Кропля" />
+    <string id="eopAWegQ" text="{.Muzcynski}Ліставы Шчыт-Кропля" />
     <string id="dWr3nuBq" text="{.Muzcynski}Узмоцнены Жалезны Аблямаваны Шчыт-Кропля" />
     <string id="EXLY9mEb" text="{.Muzcynski}Узмоцнены Велізарны Круглы Шчыт" />
     <string id="F9HQABfN" text="{.Muzcynski}Узмоцнены Плецены Квадратны Шчыт" />
@@ -759,6 +763,7 @@
     <string id="iFPkhVGe" text="{.Muzcynski}Маленькі Плоскі Трохкутны Шчыт" />
     <string id="Ita1lG33" text="{.Muzcynski}Скураны Злучаны Шчыт-Кропля" />
     <string id="jAbn05Vg" text="{.Muzcynski}Просты Шчыт-Кропля Коньніка" />
+    <string id="jdOu5l5D" text="{.Muzcynski}Узмоцнены Ліставы Шчыт-Кропля" />
     <string id="jqWBGBo7" text="{.Muzcynski}Узмоцнены Маленькі Шчыт Вершніка" />
     <string id="JzZJpbTB" text="{.Muzcynski}Узмоцнены Тарч" />
     <string id="kNDbSy6K" text="{.Muzcynski}Узмоцнены Шчыт-Кропля Вершніка" />
@@ -780,6 +785,7 @@
     <string id="przGGaVm" text="{.Muzcynski}Бронзавы Узмоцнены Горны Велізарны Шчыт" />
     <string id="QcKpipVr" text="{.Zanocy}Адарга" />
     <string id="QodawBSN" text="{.Muzcynski}Жалезны Круглы Шчыт" />
+    <string id="T3SFANYK" text="{.Muzcynski}Дружынны Шчыт-Кропля" />
     <string id="RddFH0BA" text="{.Muzcynski}Жалезны Аблямаваны Велізарны Круглы Шчыт" />
     <string id="rF7Xm7C0" text="{.Muzcynski}Цяжкі Трохкутны Шчыт" />
     <string id="txgUxMYw" text="{.Muzcynski}Трохкутны Шчыт з Выразам" />
@@ -803,6 +809,7 @@
     <string id="567zyLq5" text="{.Mnozny}Ацьверджаныя Шыпаваныя Скураныя Наплечнікі" />
     <string id="5gsp0xUN" text="{.Zanocy}Кольцакальчужныя Абарона Плячэй" />
     <string id="5uqExwWb" text="{.Nijaki}Лясное Футравае Покрыва" />
+    <string id="6CMYwYai" text="{.Zanocy}Чэрненая Шапка" />
     <string id="9w40yGlZ" text="{.Zanocy}Скураная Абарона Плячэй" />
     <string id="aChUcrRt" text="{.Zanocy}Лускатая Ахова Плячэй" />
     <string id="AHQQp0O0" text="{.Muzcynski}Скураны Ламелярная Абарона Плячэй" />
@@ -887,6 +894,7 @@
     <string id="5dQdBOTa" text="{.Zanocy}Спарынгавая Сякера Галогэйча" />
     <string id="89bCqb0Z" text="{.Muzcynski}Плецены Квадратны Турнірны Шчыт" />
     <string id="8WlRREMh" text="{.Zanocy}Спарынгавая Сякера з Бамбукавай Ручкай" />
+    <string id="AB2lD2JQ" text="{.Muzcynski}Спарынгавы Менавліён" />
     <string id="APO9YcBv" text="{.Zanocy}Спарынгавая Двухручная Сякера" />
     <string id="B0E6Zfyk" text="{.Mnozny}Спарынгавыя Дротыкі" />
     <string id="BACi0kaM" text="{.Nijaki}Спарынгавае Зазубранае Кап'ё" />
@@ -915,6 +923,7 @@
     <string id="0e17RZrZ" text="{.Muzcynski}Арбалест" />
     <string id="0lNp3f76" text="{.Zanocy}Гравераваная Вуглаватая Каскара" />
     <string id="0NLJnGfF" text="{.Mnozny}Простыя Дротыкі" />
+    <string id="0S8k9Hqa" text="{.Muzcynski}Лёгкі Арбалет Прыгоннага" />
     <string id="0SpLcthg" text="{.Muzcynski}Горны Шыпаты Дубец" />
     <string id="160aqzPm" text="{.Zanocy}Вайсковая Брытва" />
     <string id="1bc4kTaz" text="{.Muzcynski}Тамаскінскі Сталёвы Спафіён" />
@@ -942,10 +951,12 @@
     <string id="62nIvqbA" text="{.Nijaki}Баттанійскае Горнае Лязо" />
     <string id="6Db7aDbF" text="{.Mnozny}Стрэлы Балісты" />
     <string id="6EWm09LY" text="{.Zanocy}Ранішняя Зорка" />
+    <string id="6jYzHJjB" text="{.Mnozny}Кайданы" />
     <string id="6hwZwODh" text="{.Zanocy}Глефа" />
     <string id="6q0nmVtg" text="{.Zanocy}Лясная Сякера" />
     <string id="6QI8X6CY" text="{.Zanocy}Лёгкая Булава з Долам" />
     <string id="6WcZ5Tr0" text="{.Muzcynski}Молат Каваля" />
+    <string id="77GPT2B6" text="{.Muzcynski}Баявы Цэп" />
     <string id="7jH0kuof" text="{.Zanocy}Шыпатая Булава" />
     <string id="7LmUe8fQ" text="{.Muzcynski}Менавліён" />
     <string id="7phSQw5i" text="{.Zanocy}Матыка" />
@@ -957,15 +968,16 @@
     <string id="93OHSnEV" text="{.Muzcynski}Упрыгожаны Доўгі Булат" />
     <string id="9EWN9SiT" text="{.Muzcynski}Лёгкі Шышпар" />
     <string id="9pD32UdV" text="{.Nijaki}Горнае Булава" />
+    <string id="9UB0LF8Z" text="{.Nijaki}Паўночнае Вершніцкае Кап'ё" />
     <string id="9YbFEaZ1" text="{.Muzcynski}Цісавы Лук" />
     <string id="9ZiUK3JJ" text="{.Muzcynski}Шырокі Двухручнік з Шырокім Долам" />
     <string id="a10taTGb" text="{.Zanocy}Шабля з Водціскам Ільва" />
+    <string id="a3WNz6Ci" text="{.Mnozny}Каменныя Кулі Прашчы" />
     <string id="a47UTuL6" text="{.Zanocy}Судзьдзя" />
     <string id="A6llHL9s" text="{.Muzcynski}Доўгі Лук з Нізінаў" />
     <string id="Ag6dujzl" text="{.Nijaki}Канійскае Лязо" />
     <string id="aGbTPme1" text="{.Zanocy}Каса" />
     <string id="AMIdBVZb" text="{.Zanocy}Выдатная Сталёвая Спата" />
-    <string id="AOZbTGOS" text="{.Muzcynski}Ксіфас" />
     <string id="arBdK7st" text="{.Muzcynski}Просты Меч Бастарда" />
     <string id="b88lWWOo" text="{.Zanocy}Выдатная Сталёвая Булава" />
     <string id="b8AgXwbL" text="{.Muzcynski}Шырокі Збройны Меч" />
@@ -974,6 +986,7 @@
     <string id="bcjcw1o9" text="{.Zanocy}Лясная Сякера-Калун" />
     <string id="bdTQG99v" text="{.Zanocy}Бамбукавая Ручная Сякера" />
     <string id="beVFwINO" text="{.Muzcynski}Драўляны Молат" />
+    <string id="bhiVBSge" text="{.Muzcynski}Нож" />
     <string id="Biq7t1xv" text="{.Mnozny}Далёкабойныя Стрэлы" />
     <string id="bK03bqdA" text="{.Mnozny}Турнірныя Стрэлы" />
     <string id="bNABNs8O" text="{.Zanocy}Квадратная Трохі Двухручная Сякера" />
@@ -993,6 +1006,7 @@
     <string id="dCbrowBV" text="{.Zanocy}Выдатная Сталёвая Доўгая Каскара" />
     <string id="DFcMeRdB" text="{.Zanocy}Простая Баёвая Сякера Грабежніка" />
     <string id="DI9P2HDG" text="{.Mnozny}Складзеныя Ігольчастыя Стрэлы" />
+    <string id="dkldfSqU" text="{.Muzcynski}Шыпаваны Цэп" />
     <string id="Dj64aJKQ" text="{.Muzcynski}Біль з Гакам" />
     <string id="dkuzrKJF" text="{.Zanocy}Выдатная Піка" />
     <string id="DQaV0i5W" text="{.Muzcynski}Жалезны Шырокі Меч" />
@@ -1006,7 +1020,6 @@
     <string id="EBRG6qbv" text="{.Zanocy}Шляхетная Дзіда Вершніка" />
     <string id="EgrNdBct" text="{.Nijaki}Зазубранае Кідальнае Кап'ё" />
     <string id="ekUvh8Em" text="{.Muzcynski}Канійскі Двухручнік" />
-    <string id="elTXYb9f" text="{.Muzcynski}Фалькс-Нож" />
     <string id="eND6ECxg" text="{.Zanocy}Дзіда Катафракта" />
     <string id="EO7pCu1b" text="{.Muzcynski}Шляхетны Лук" />
     <string id="ErOLa263" text="{.Zanocy}Паходня" />
@@ -1031,7 +1044,6 @@
     <string id="gsGjXj8J" text="{.Muzcynski}Пустэльны Доўгі Меч" />
     <string id="gYpNILVC" text="{.Zanocy}Кувалда" />
     <string id="GyYsQlVd" text="{.Zanocy}Упрыгожаная Кароткая Спата" />
-    <string id="h1jKICdp" text="{.Muzcynski}Просты Кароткі Лук" />
     <string id="h60wQVVX" text="{.Zanocy}Піка" />
     <string id="H9hzBJz3" text="{.Nijaki}Кап'ё для Практыцы" />
     <string id="ha3rVEzP" text="{.Muzcynski}Рабрысты Змочаны Збройны Меч" />
@@ -1040,7 +1052,6 @@
     <string id="HclLXEaT" text="{.Zanocy}Конская Пуга" />
     <string id="HECAP8QW" text="{.Muzcynski}Бярдыш з Кароткай Ручкай" />
     <string id="hN4wE2gG" text="{.Mnozny}Цяжкія Ніты" />
-    <string id="HP1GzM8l" text="{.Muzcynski}Вогнены Збан" />
     <string id="HpdJJO9g" text="{.Zanocy}Спата-Лязо з Кальцавым Навершам" />
     <string id="hQrLHkaU" text="{.Zanocy}Сякера-Галогэйча" />
     <string id="hsRwbHSk" text="{.Zanocy}Дзіда Мамлюка" />
@@ -1085,9 +1096,11 @@
     <string id="ktJ6crBs" text="{.Muzcynski}Шырокі Фалькіан" />
     <string id="Kv4zAMIh" text="{.Zanocy}Булава Катафракта" />
     <string id="kxtSkGju" text="{.Muzcynski}Амбасадар" />
+    <string id="L5i5RgO0" text="{.Zanocy}Ваўняная Прашча" />
     <string id="l69aXkKH" text="{.Mnozny}Штуршковыя Вілы" />
     <string id="l9kAJ1Xh" text="{.Nijaki}Горнае Шырокае Лязо" />
     <string id="LAEaH3zB" text="{.Muzcynski}Просты Лёгкі Арбалет" />
+    <string id="lbkaoPk6" text="{.Zanocy}Сіка" />
     <string id="ljOwXClb" text="{.Muzcynski}Нарвескі Тапор" />
     <string id="LVQworUy" text="{.Zanocy}Шырокая Каскара" />
     <string id="lXwaLAYP" text="{.Muzcynski}Вайсковы Меч з Тамаскінскай Сталі" />
@@ -1106,6 +1119,7 @@
     <string id="NaaM2O2g" text="{.Muzcynski}Выдатны Шырокі Меч Паўночніка з Долам" />
     <string id="NFT4sLva" text="{.Nijaki}Высокае Змочанае Кап'ё" />
     <string id="NkV2c6YX" text="{.Mnozny}Складзеныя Стэпавыя Стрэлы" />
+    <string id="nq26Puio" text="{.Muzcynski}Цяжкі Арбалет Прыгоннага" />
     <string id="nTc20R1R" text="{.Zanocy}Самаробная Кувалда" />
     <string id="o5kKAbRu" text="{.Zanocy}Дзіда Рыцара" />
     <string id="ObGN145P" text="{.Mnozny}Лясныя Дротыкі" />
@@ -1129,6 +1143,7 @@
     <string id="QLcP8bIs" text="{.Muzcynski}Фалькс" />
     <string id="QnyD1yWB" text="{.Zanocy}Шырокая Сякера Паўночніка" />
     <string id="Qpl5aCb0" text="{.Zanocy}Сякера Ваяра Ветэрана" />
+    <string id="qxYDHkKl" text="{.Zanocy}Узмоцненая Прашча" />
     <string id="qZOpdQVx" text="{.Muzcynski}Зорны Фалькіан" />
     <string id="r07M9xbT" text="{.Muzcynski}Цяжкі Арбалет" />
     <string id="Rcc0JW6H" text="{.Zanocy}Тамаскінская Сталёвая Спата" />
@@ -1166,11 +1181,13 @@
     <string id="v7WQhge3" text="{.Zanocy}Упрыгожаная Шабля" />
     <string id="VAcSEseI" text="{.Muzcynski}Шырокі Збройны Меч з Шырокім Долам" />
     <string id="VAO11FSu" text="{.Muzcynski}Тамаскінскі Сталёвы Двухручнік" />
+    <string id="vDfuEQ7M" text="{.Muzcynski}Стургійскі Кароткі Лук" />
     <string id="vDvj5zkG" text="{.Zanocy}Лютасьць Ветру" />
     <string id="vmz4vfu5" text="{.Mnozny}Крукаватыя Дротыкі" />
     <string id="VP74qdJ3" text="{.Zanocy}Дзіда Курсера" />
     <string id="vPXWpJTP" text="{.Muzcynski}Горны Кінжал" />
     <string id="VucrovFw" text="{.Muzcynski}Гравераваны Палаш" />
+    <string id="VxRYaOc2" text="{.Muzcynski}Шырокі Скаэн" />
     <string id="vXYlLH6L" text="{.Nijaki}Доўгае Тамаскінскае Змочанае Кап'ё" />
     <string id="Vyw5KNxR" text="{.Nijaki}Кароткае Кап'ё Рушэньня" />
     <string id="w6EU77OH" text="{.Muzcynski}Стэпавы Загнуты Назад Лук" />
@@ -1198,15 +1215,18 @@
     <string id="xYk4953c" text="{.Zanocy}Сталёвая Булава" />
     <string id="yCvBx27Z" text="{.Nijaki}Зазубранае Кап'ё" />
     <string id="Yd4lmlQp" text="{.Zanocy}Вузкая Выдатная Сталёвая Каскара" />
+    <string id="yeQr4RiM" text="{.Mnozny}Выдзяўбаныя Кулі Прашчы" />
     <string id="YGndAhTr" text="{.Nijaki}Уцяжаранае Стэпавае Кап'ё" />
     <string id="YGQ6UXCo" text="{.Muzcynski}Горны Паляўнічы Лук" />
     <string id="YLplNGxb" text="{.Zanocy}Кальрадыйская Булава" />
     <string id="YPUDAJDH" text="{.Muzcynski}Гарпун" />
     <string id="YrAVxmFn" text="{.Muzcynski}Горны Шырокі Меч" />
+    <string id="z3brrzJ9" text="{.Zanocy}Сплеценая Прашча" />
     <string id="Z6Ak3H6G" text="{.Muzcynski}Джарэйд" />
     <string id="zbsajPMp" text="{.Muzcynski}Вульж" />
     <string id="zBUT90xQ" text="{.Zanocy}Тамаскінская Сталёвая Каскара" />
     <string id="Zcaucj4W" text="{.Zanocy}Упрыгожаная Збройны Меч" />
+    <string id="ZDZR5UzN" text="{.Mnozny}Сьвінцовыя Кулі Прашчы" />
     <string id="ZeU1fvdz" text="{.Zanocy}Груда Буйнай Карцечы" />
     <string id="ZFwKlHIJ" text="{.Muzcynski}Лясны Доўгі Лук" />
     <string id="zH0QF7mE" text="{.Nijaki}Гербавае Кап'ё з Выступам і Рушамі" />
