--- a/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYl/Native/std_TaleWorlds_MountAndBlade_ViewModelCollection_by.xml
+++ b/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYl/Native/std_TaleWorlds_MountAndBlade_ViewModelCollection_by.xml
@@ -7,14 +7,14 @@
   <string id="0Itt3bZM" text="Ciapierašniaja viersija dakumienta pryviazki kłavišaŭ sastareła. Pryviazki kłaviš byli viernuty da pradvyznačanych značeńniaŭ."/>
   <string id="1hlaGzGI" text="Hladzieć"/>
   <string id="1hnq3Kb1" text="Vy sapraŭdy žadajecie skinuć usie nałady? Vašyja źmieny buduć stračanyja."/>
-  <string id="2AGvFYk9" text="Kab pačać misiju, vy musicie mieć prynamsi adnu pabudovu kłasa {FORMATION_CLASS}."/>
+  <string id="2AGvFYk9" text="Kab pačać misiju, vy musicie mieć prynamsi adno farmavańnie kłasa {FORMATION_CLASS}."/>
   <string id="4gCU2ykB" text="Skinuć usie klučy da pradvyznačanych"/>
   <string id="5Ixsvn3s" text="Pakazać došku vynikaŭ"/>
   <string id="61isYVW0" text="Hulec {USER_NAME} nia znojdzieny"/>
   <string id="6syoutpV" text="Ad {WHISPER_TARGET}"/>
   <string id="74PKmRWJ" text="Paviarnuć Vałasy"/>
   <string id="76VR5o8h" text="Vy pavinny pačakać {SECONDS} siakund da adpraŭleńnia nastupnaha paviedamleńnia."/>
-  <string id="7jhe9cT9" text="Kab źmianić typ hetaj pabudovy, treba mieć prynamsi jašče adnu pabudovu takoha typu."/>
+  <string id="7jhe9cT9" text="Kab źmianić typ hetaha farmavańnia, treba mieć prynamsi jašče adno farmavańnie hetaha typu."/>
   <string id="7XtICVeZ" text="Dalokaść Ahladu"/>
   <string id="82LuSDnd" text="Chutki Ruch Kursora Naleva"/>
   <string id="9pCzjSTa" text="{PERCENTAGE}% ad typu vajaroŭ" />
@@ -32,7 +32,7 @@
   <string id="d5SNB0HV" text="Uziać {ITEM_NAME}"/>
   <string id="Dhb2N5JD" text="Naciśnicie {KEY}, kab cyklična pierabirać kanały"/>
   <string id="DmaP2qaR" text="Typ Skury"/>
-  <string id="DQvGNQ0g" text="Adsutničajuć adzinki pad vašym kantrolem."/>
+  <string id="DQvGNQ0g" text="Niama vajaroŭ, jakich vy možacie kantralavać."/>
   <string id="DvnRkWQg" text="Pieradača Vajaroŭ {FORMATION_INDEX}"/>
   <string id="eeJcVeQG" text="Kaniec Fokusu"/>
   <string id="eGuQKRhb" text="Vy pakidajecie hetuju vobłaść!"/>
@@ -75,7 +75,7 @@
   <string id="Sbb8YcJM" text="Skasavać vybar usich abranych hierojaŭ"/>
   <string id="scnSXrYC" text="Ściahanosy"/>
   <string id="SfsnlbyK" text="Źmieny ŭžyty."/>
-  <string id="SLY8z9fP" text="Abrany ŭsie pabudovy!"/>
+  <string id="SLY8z9fP" text="Abrany ŭsie farmavańni!"/>
   <string id="SQpGQzTI" text="Kantroler"/>
   <string id="suyl7WWa" text="Ściah nie ekipijavany"/>
   <string id="trPyg7mr" text="Bajavaja Maral" />
