--- a/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYl/Native/std_common_strings_xml_by.xml
+++ b/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYl/Native/std_common_strings_xml_by.xml
@@ -124,7 +124,7 @@
   <string id="5j6mIuu1" text="Što? Ja nie razumieju."/>
   <string id="5k4dxUEJ" text="Vajary"/>
   <string id="5LpufKs7" text="Idzicie Ŭsled za Mnoj"/>
-  <string id="5n4rWI9T" text="{.Muzcynski}Šypaty Šałom z Maskaj"/>
+  <string id="5n4rWI9T" text="{.Muzcynski}Šałom sa Śpičakom i Maskaj"/>
   <string id="5nEh20ju" text="Vasiłops"/>
   <string id="5rj7xQE4" text="Łuk"/>
   <string id="5siAbi69" text="Mu Tarere"/>
@@ -154,7 +154,7 @@
   <string id="7dAy51ln" text="{.Muzcynski}Cervieljer nad Zbrojnym Koifam"/>
   <string id="7EAEIUIY" text="{.Zanocy}Ciažkaja Kalcavaja Kalčuha"/>
   <string id="7HbspP6x" text="{.Zanocy}Zhrabnaja Łuskataja Kalčuha Lehijaniera"/>
-  <string id="7k9izAvC" text="Skalderbroda"/>
+  <string id="7k9izAvC" text="Skolderbruda"/>
   <string id="7LmUe8fQ" text="{.Muzcynski}Mienavlijon"/>
   <string id="7MkoLtWC" text="{.Zanocy}Siakiera"/>
   <string id="7Q8ufo5X" text="Karabli"/>
@@ -176,7 +176,7 @@
   <string id="8uBew3nD" text="{.Muzcynski}Šypavanyja Poručy"/>
   <string id="8UBfIenN" text="Narmaln."/>
   <string id="8UJ3cPrZ" text="Mizeja dała svaju nazvu Majzejadu, bahataj uzhorystaj krainie na ŭschodnie-centralnaj častcy Impieryi. Hety rehijon - miesca stajanak ludziej, jon naležaŭ sienataru Litaŭsu, jaki adnosna mirna padnačaliŭ Impieryi pałajskija plamiony, prapanavaŭšy im abaronu ad stepavych nalotnikaŭ. Adnak, kali jon trapiŭ pad udar svaich supiernikaŭ u Sienacie, jon pasprabavaŭ arhanizavać ich u kankurentnuju barbarskuju respubliku naŭzor staražytnaj kalradyjskaj. Impieryja źniščyła jaje, ale tutejšyja žychary, zaraz užo całkam kalradyzavanyja, usio jašče zachoŭvajuć prychilnaść da staroj respublikanskaj sistemy i jaje prychilnikaŭ."/>
-  <string id="8ZNOgT8Z" text="{BONUS_AMOUNT}% da škody blizkaha boju vajaram vašaj pabudovy."/>
+  <string id="8ZNOgT8Z" text="{BONUS_AMOUNT}% da škody blizkaha boju vajaram farmavańnia, jakim vy kirujecie."/>
   <string id="915frsPd" text="Korena"/>
   <string id="927d3urB" text="{.Muzcynski}Draŭlany Avalny Ščyt"/>
   <string id="9aboazgu" text="Linija"/>
@@ -188,7 +188,7 @@
   <string id="9Eyd2qGo" text="{.Mnozny}Uzmocnienyja Zamšavyja Boty"/>
   <string id="9FgxK9se" text="{.Muzcynski}Vysoki Šałom"/>
   <string id="9pgOGq7X" text="Žurnał"/>
-  <string id="9RZLSV3E" text="{BONUS_AMOUNT}% škoda dla vajaroŭ blizkaha boju ŭ vašaj pabudovie suprać vieršnikaŭ."/>
+  <string id="9RZLSV3E" text="{BONUS_AMOUNT}% škoda dla vajaroŭ blizkaha boju suprać vieršnikaŭ u farmavańni, jakim vy kirujecie."/>
   <string id="9sokmYMZ" text="Padmos"/>
   <string id="9TGLirQf" text="Koła"/>
   <string id="9xyXdX4I" text="Taros"/>
@@ -357,7 +357,7 @@
   <string id="customgametitle" text="Mapa"/>
   <string id="CvVJyKYA" text="Teleja"/>
   <string id="cZIhxH9e" text="Pakaryjos"/>
-  <string id="cZNA5Z6l" text="Pabudova {NUMBER}"/>
+  <string id="cZNA5Z6l" text="Farmavańnie {NUMBER}"/>
   <string id="cZzfNlxd" text="Vosień"/>
   <string id="d0kbtGYn" text="Vam brakuje zołata."/>
   <string id="D0SX1cFQ" text="Leŭ"/>
@@ -418,7 +418,7 @@
   <string id="EJZLzhJk" text="Sanieopa raźmieščana na nizkim pieravale, što viadzie z daliny Nevis na poŭnač da basiejna Aftys. Staražytnyja pałajskija narody hetaha kraja, naprykład Battanijcy, stavilisia da azioraŭ jak da śviatych miescaŭ, a Aftys, u pryvatnaści, ličyŭsia bramaju ŭ tahaśviet. Šum i mituśnia Sanieopy, adnaho z hałoŭnych handlovych centraŭ unutranaj častki Kalradyi, rezka kantrastujuć z ciomnymi i cichimi vodami ŭnizie."/>
   <string id="ekcBrNN1" text="Erien"/>
   <string id="ELsDFwAD" text="Vino{@Plural}amfaraŭ vina{\@}"/>
-  <string id="eMbuGGus" text="Abiarycie vajaroŭ pabudovy."/>
+  <string id="eMbuGGus" text="Abiarycie vajaroŭ farmavańnia."/>
   <string id="empirefaction" text="Impieryja"/>
   <string id="EmVbbIUc" text="Viarnucca"/>
   <string id="eN1eFdhF" text="{.Zanocy}Upryhožanaja Skuranaja Zaprežka nad Łuskataj"/>
@@ -491,7 +491,7 @@
   <string id="fwxHsC1h" text="{.Muzcynski}Karotki Hambiezon nad Tunikaj"/>
   <string id="FxnFBhrF" text="{.Muzcynski}Ščyt-Kropla Vieršnika"/>
   <string id="G0AWk1rX" text="Leśvica"/>
-  <string id="g0l7W5xQ" text="{BONUS_AMOUNT}% da chutkaści ruchu vieršnikam vašaj pabudovy."/>
+  <string id="g0l7W5xQ" text="{BONUS_AMOUNT}% da chutkaści ruchu vieršnikam farmavańnia, jakim vy kirujecie."/>
   <string id="g51zVsKU" text="{.Mnozny}Kalčužnyja Micienki"/>
   <string id="g5BPd0Oc" text="{.Muzcynski}Tkany Koif"/>
   <string id="G7AEWZ6c" text="{.Muzcynski}Upryhožany Avalny Ščyt"/>
@@ -514,7 +514,7 @@
   <string id="GPESFoWD" text="Anahr"/>
   <string id="gsVtO9A7" text="Rušeńnie"/>
   <string id="GTaxqBcv" text="{.Zanocy}Brania Aŭksilija"/>
-  <string id="Gu0Wxxul" text="{BONUS_AMOUNT}% štraf trapnaści dla vajaroŭ dalokaha boju ŭ vašaj pabudovie."/>
+  <string id="Gu0Wxxul" text="{BONUS_AMOUNT}% štraf trapnaści dla vajaroŭ dalokaha boju ŭ farmavańni, jakim vy kirujecie."/>
   <string id="guardnoun" text="Vartavy"/>
   <string id="gUTqDROO" text="{.Muzcynski}Zakryty Hałaŭny Šal"/>
   <string id="GWaJ7Ksq" text="Jokułos"/>
@@ -672,7 +672,7 @@
   <string id="KjzJjj5n" text="Eronis"/>
   <string id="kkUQObZn" text="Pustelnyja Bandyty"/>
   <string id="KKWEkA4P" text="{.Zanocy}Hrubaja Skura Miadźviedzia"/>
-  <string id="klGEDUmw" text="{BONUS_AMOUNT}% da škody suprać ščytoŭ vajaram vašaj pabudovy."/>
+  <string id="klGEDUmw" text="{BONUS_AMOUNT}% da škody suprać ščytoŭ vajaram farmavańnia, jakim vy kirujecie."/>
   <string id="kmdjRAoG" text="{.Muzcynski}Šnuravany Tkany Koif"/>
   <string id="koX9okuG" text="Ničoha"/>
   <string id="KoyU5yeY" text="{.Muzcynski}Upryhožany Bronzavy Kaŭpak z Machrami i Abaronaj Ščok"/>
@@ -693,7 +693,7 @@
   <string id="L7wn49Uz" text="Dypłamatyja"/>
   <string id="l91l1TJo" text="{.Muzcynski}Kalarovy Turban"/>
   <string id="L9weGfoX" text="Saleja"/>
-  <string id="labbKop6" text="{BONUS_AMOUNT}% da škody dalokaha boju vajaram vašaj pabudovy."/>
+  <string id="labbKop6" text="{BONUS_AMOUNT}% da škody dalokaha boju vajaram farmavańnia, jakim vy kirujecie."/>
   <string id="lAWwcO6b" text="Vłandyjskaje Karaleŭstva"/>
   <string id="lB4UF1GT" text="{.Zanocy}Doŭhaja Tunika"/>
   <string id="Lbm7asY3" text="{.Muzcynski}Vysoki Trochkutny Ščyt"/>
@@ -793,7 +793,7 @@
   <string id="NOchnEwX" text="Huzid"/>
   <string id="nOMT0Cw6" text="Źnižany Maralny Šok"/>
   <string id="NqarFr4P" text="Nałady"/>
-  <string id="nqWulUTP" text="{BONUS_AMOUNT}% da chutkaści ruchu piachocie vašaj pabudovy."/>
+  <string id="nqWulUTP" text="{BONUS_AMOUNT}% da chutkaści ruchu piachocie farmavańnia, jakim vy kirujecie."/>
   <string id="nSoJkeBI" text="Sitakieja"/>
   <string id="NSSsxBHV" text="Vypadkavać"/>
   <string id="NT5fwUuJ" text="Pierachod Ubrod"/>
@@ -834,7 +834,7 @@
   <string id="OpYdqPWs" text="{.Muzcynski}Adkryty Kalčužny Koif"/>
   <string id="oQSZ0XgP" text="{.Zanocy}Upryhožanaja Tłustaja Tunika"/>
   <string id="OrEgjXZ1" text="{.Zanocy}Hrubaja Kručanaja Kufija"/>
-  <string id="ORFrCYSn" text="{BONUS_AMOUNT}% da škody atak blizkaha boju vajaram vašaj pabudovy."/>
+  <string id="ORFrCYSn" text="{BONUS_AMOUNT}% da škody atak blizkaha boju vajaram farmavańnia, jakim vy kirujecie."/>
   <string id="oUz16Nav" text="Skinuć Padkazki"/>
   <string id="OVcoYxj1" text="Nazva Serviera"/>
   <string id="OvlG2Vu1" text="{.Zanocy}Hrubaja Bryhancina"/>
@@ -843,7 +843,7 @@
   <string id="oZrVNUOk" text="Pamyłka"/>
   <string id="p0hcyZdp" text="Zienon"/>
   <string id="p0JFbL7G" text="Źnižanaja Atrymanaja Škoda ad Atak Dalokaha Boju"/>
-  <string id="P3IWytsr" text="Pabudova zaraz pustaja"/>
+  <string id="P3IWytsr" text="Farmavańnie zaraz pustoje"/>
   <string id="P3rMg4uZ" text="Bok Hulca"/>
   <string id="p6NIgRpk" text="{.Zanocy}Hrubaja Chavajučaja Šapka"/>
   <string id="p6QNVu8p" text="Fłot"/>
@@ -1886,7 +1886,7 @@
   <string id="Vxt0xTvV" text="Mavieja"/>
   <string id="VylHwqVq" text="{.Muzcynski}Siehmientavany Skałkep nad Šnuravanym Koifam"/>
   <string id="VzhbUL60" text="Viendelija"/>
-  <string id="W0agPHes" text="{BONUS_AMOUNT}% da štrafu marali ad śmierci vajaram vašaj pabudovy."/>
+  <string id="W0agPHes" text="{BONUS_AMOUNT}% da štrafu marali ad śmierci vajaram farmavańnia, jakim vy kirujecie."/>
   <string id="W1uwgvAQ" text="Aryjon"/>
   <string id="W2WXkiAh" text="Pasiarednik-Vykupnik"/>
   <string id="W4iKIM2s" text="Maleńki Ščyt"/>
@@ -2003,7 +2003,7 @@
   <string id="yfa7tpbK" text="Usie"/>
   <string id="yFl9N7wz" text="Uziać"/>
   <string id="yG3YUySN" text="Zachodniaja Impieryja"/>
-  <string id="ygfhbfr0" text="{.Muzcynski}Šypaty Šałom"/>
+  <string id="ygfhbfr0" text="{.Muzcynski}Šałom sa Śpičakom"/>
   <string id="ygJkPxyc" text="Horad Adoch mieścicca ŭ padnožža Kohi Rohini, hary Śvitanku. Adzin z samych addalenych haradoŭ Deŭsaha, jon, pa padańni, byŭ prystankam Haspadara Ahhaka, mifičnaha tyrana, z plačej jakoha ściakali źmiei. Navat siońnia Kohi Rohini maje reputacyju miesca čornaj mahii i tajamnicaŭ, što dapamahaje trymać čužyncaŭ na adlehłaści. Horad paŭ padčas zavajoŭ Chuzaitaŭ ad kłana Charfit, jaki źmiašaŭsia z hornymi narodami, pavažaje ich zvyčai, biare ŭdzieł u ich rytuałach i zachoŭvaje ich sakrety."/>
   <string id="YGQ6UXCo" text="{.Muzcynski}Horny Palaŭničy Łuk"/>
   <string id="Yh7Dorsr" text="{.Zanocy}Pałasataja Skuranaja Zaprežka"/>
@@ -2029,7 +2029,7 @@
   <string id="Yvk8a2tb" text="Praca Nahami"/>
   <string id="YxglkaXU" text="{.Muzcynski}Bieły Tabard nad Kalčužnym Haŭbierkam"/>
   <string id="YYYxOiCq" text="Ampreła - hałoŭny horad na krajnim paŭnočnym uschodzie Impieryi. Na jaho viežach stajać dazornyja, vyhladvajučy sihnalnyja ahni pamiežnych zamkaŭ poŭnačy, uschoda i zachada, jakija mohuć apaviaścić pra nabližeńnie nalotnikaŭ. Konnyja łučniki, nabranyja z hrubych elefterojskich volnaadpuščanikaŭ, pjuć u vajarniach, čakajučy zahadu vyjechać suprać stepavych vieršnikaŭ. Katafrakty prachodziać praz bramu horada, kab supierničać z kniaziami Sturhii za kantrol nad handlem praz susiedniuju sietku azioraŭ, viadomuju jak partały Iltan."/>
-  <string id="Z2xgnrDa" text="{BONUS_AMOUNT}% da škody najezdam vieršnikam vašaj pabudovy."/>
+  <string id="Z2xgnrDa" text="{BONUS_AMOUNT}% da škody najezdam vieršnikam farmavańnia, jakim vy kirujecie."/>
   <string id="z3VamNrX" text="Adpravić svaich vajaroŭ."/>
   <string id="Z54ZrDG9" text="Tady, da sustrečy."/>
   <string id="Z6Ak3H6G" text="{.Muzcynski}Džarejd"/>
