--- a/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYl/SandBoxCore/std_spitems_xml_by.xml
+++ b/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYl/SandBoxCore/std_spitems_xml_by.xml
@@ -273,6 +273,7 @@
     <string id="tVyuxl8e" text="{.Zanocy}Irvanaja Roba" />
     <string id="tXbRb3QO" text="{.Zanocy}Šypavanaja Futravaja Brania" />
     <string id="U7WGaQ45" text="{.Zanocy}Pa-majstersku Zroblenaja Paŭdniovaja Łuskata nad Łancuhovym Haŭbierkam" />
+    <string id="uZYqmBST" text="{.Zanocy}Černienaja Bronia" />
     <string id="U8QfF3Gw" text="{.Zanocy}Doŭhaja Vaŭnianaja Tunika" />
     <string id="v4THTk5O" text="{.Muzcynski}Kaptan sa Skuranym Pojasam" />
     <string id="v6W9XaDI" text="{.Zanocy}Staraja Futravaja Brania" />
@@ -345,7 +346,7 @@
     <string id="51EcVnzd" text="{.Muzcynski}Šałom z Zasłonaj nad Šnuravanym Koifam" />
     <string id="5c4cHL9Z" text="{.Zanocy}Chuzaickaja Bajavaja Karona" />
     <string id="5kAqcWac" text="{.Muzcynski}Futravy Ablamavany Šałom z Kaštoŭnaściami" />
-    <string id="5n4rWI9T" text="{.Muzcynski}Šypaty Šałom z Maskaj" />
+    <string id="5n4rWI9T" text="{.Muzcynski}Šałom sa Śpičakom z Maskaj" />
     <string id="6Dk7LClc" text="{.Muzcynski}Bahaty Turban nad Šałomam" />
     <string id="6n44BIll" text="{.Muzcynski}Zavostrany Skałkep nad Šnuravanym Koifam" />
     <string id="77RIGK7B" text="{.Muzcynski}Kalčužny Koif" />
@@ -453,7 +454,7 @@
     <string id="n1A47HcZ" text="{.Muzcynski}Šlachietny Šałom Ułana" />
     <string id="N3SgmNxe" text="{.Muzcynski}Hałaŭny Šal" />
     <string id="n7c7tnx9" text="{.Muzcynski}Šałom Vajskavoda z Abaronaj Nosa" />
-    <string id="NB9bQt6O" text="{.Muzcynski}Šypaty Šałom z Adkrytym Turban" />
+    <string id="NB9bQt6O" text="{.Muzcynski}Šałom sa Śpičakom i Adkrytym Turbanam" />
     <string id="ndfDy5B8" text="{.Mnozny}Zakručanyja Hałaŭnyja Abhortki" />
     <string id="NEupkuqV" text="{.Zanocy}Pustelnaja Chustka" />
     <string id="NhDpFjF0" text="{.Muzcynski}Uzmocnieny Zakryty Šałom z Abaronaj Vačej" />
@@ -506,7 +507,7 @@
     <string id="SV1pTR2P" text="{.Muzcynski}Miakki Koif" />
     <string id="SVTa5spB" text="{.Zanocy}Zakrytaja Stalovaja Šapka" />
     <string id="SYvBTD0p" text="{.Muzcynski}Poŭny Šlem nad Hałaŭnymi Abkrutkami" />
-    <string id="T6ObiB5P" text="{.Muzcynski}Šypaty Šałom nad Zakrytym Turbanam" />
+    <string id="T6ObiB5P" text="{.Muzcynski}Šałom sa Śpičakom nad Zakrytym Turbanam" />
     <string id="TFT2Xapz" text="{.Muzcynski}Vostrakancovy Šałom nad Miakkaj Tkańniu" />
     <string id="tMLH04n4" text="{.Muzcynski}Kapalin-Kapialuch nad Kalčužnym Koifam" />
     <string id="Tp7zXWGa" text="{.Muzcynski}Šałom z Nanośnikam nad Miakkim Koifam" />
@@ -553,12 +554,13 @@
     <string id="X1Wn0sBa" text="{.Muzcynski}Ckurany Šypavany Šlem nad Hrubaj Łuskataj" />
     <string id="XCnUaINR" text="{.Muzcynski}Bronzavy Nazalchielm nad Kalčuhaj" />
     <string id="xJTfOqD6" text="{.Muzcynski}Šałom Katafrakta z Abaronaj Vačej" />
+    <string id="XrsKuPT5" text="{.Muzcynski}Černieny Kaptur" />
     <string id="xnoAJwoy" text="{.Muzcynski}Poŭny Šlem nad Miakkaj Tkańniu" />
     <string id="xTH3z9Sr" text="{.Muzcynski}Španhienchelm nad Skuraju" />
     <string id="XuwQvSDo" text="{.Muzcynski}Žalezny Kruhły Kapalin nad Kalčuhaj" />
     <string id="YDibTDob" text="{.Zanocy}Hornaja Karona-Šałom" />
     <string id="YFg8x5QC" text="{.Muzcynski}Azdobleny Piorami Španhienchelm nad Koifam" />
-    <string id="ygfhbfr0" text="{.Muzcynski}Šypaty Šałom" />
+    <string id="ygfhbfr0" text="{.Muzcynski}Šałom sa Śpičakom" />
     <string id="yMi4ijgI" text="{.Muzcynski}Miakki Kaptur Kačeŭnika" />
     <string id="YQd9C8u2" text="{.Muzcynski}Kapalin nad Miakkim Koifam" />
     <string id="YqhOxb1Z" text="{.Muzcynski}Apierany Łamielarny Šałom" />
@@ -629,7 +631,7 @@
     <string id="kKuVy1jT" text="{.Muzcynski}Chamsin{@Plural}Koniej Chamsin{\@}" />
     <string id="Kp9kslko" text="{.Muzcynski}Daršyjski Koń{@Plural}Daršyjskich Koniej{\@}" />
     <string id="lULBZ714" text="Alej{@Plural}amfaraŭ aleju{\@}" />
-    <string id="LzlQUcak" text="{.Muzcynski}Uzmocnieny Kalčužny Bard" />
+    <string id="LzlQUcak" text="{.Muzcynski}Łamielarny Bard" />
     <string id="lZZOQsxc" text="{.Nijaki}Hrubaje Siadło Vieršnika" />
     <string id="meARhlZC" text="{.Muzcynski}Vałanbijski Kursier{@Plural}Vałanbijskich Kursieraŭ{\@}" />
     <string id="MedDPUNh" text="{.Muzcynski}Destryjer{@Plural}Destryjeraŭ{\@}" />
@@ -677,7 +679,6 @@
     <string id="Wj98Otmo" text="{.Muzcynski}Stepavy Čardžer{@Plural}Stepavych Čardžeraŭ{\@}" />
     <string id="WSk5Sibs" text="Syr{@Plural}bondaŭ syru{\@}" />
     <string id="WVqaRKUm" text="Poŭść{@Plural}adzinak poŭści{\@}" />
-    <string id="XkwOTdVQ" text="{.Muzcynski}Kielcki Maroz" />
     <string id="xsu6bPTv" text="Lon{@Plural}miachoŭ ilnu{\@}" />
     <string id="Yh7Dorsr" text="{.Zanocy}Pałasataja Skuranaja Zaprežka" />
     <string id="yQTBY9ie" text="Kaštoŭnaści{@Plural}adzinak kaštoŭnaściaŭ{\@}" />
@@ -704,6 +705,7 @@
     <string id="FQqaVHq2" text="{.Mnozny}Boty Leśnika" />
     <string id="Ga5mCiLp" text="{.Mnozny}Skuranyja Boty Vieršnika" />
     <string id="IOOTPpYj" text="{.Mnozny}Futravyja Ablamavanyja Skryŭlenyja Boty" />
+    <string id="iqaRjMhe" text="{.Mnozny}Černienyja Boty" />
     <string id="J00AF9Qv" text="{.Mnozny}Satkanyja Skuranyja Boty" />
     <string id="jVK5B86k" text="{.Mnozny}Futravyja Boty" />
     <string id="Kgnm0FkE" text="{.Mnozny}Skuranyja Tufli" />
@@ -744,6 +746,8 @@
     <string id="cXesETQJ" text="{.Zanocy}Vielizarnaja Adarha" />
     <string id="dacwWKE2" text="{.Muzcynski}Znošany Ščyt-Kropla" />
     <string id="dbbwszHd" text="{.Muzcynski}Upryhožany Kruhły Ščyt" />
+    <string id="djSq8yL0" text="{.Muzcynski}Kutny Ščyt-Kropla" />
+    <string id="eopAWegQ" text="{.Muzcynski}Listavy Ščyt-Kropla" />
     <string id="dWr3nuBq" text="{.Muzcynski}Uzmocnieny Žalezny Ablamavany Ščyt-Kropla" />
     <string id="EXLY9mEb" text="{.Muzcynski}Uzmocnieny Vielizarny Kruhły Ščyt" />
     <string id="F9HQABfN" text="{.Muzcynski}Uzmocnieny Plecieny Kvadratny Ščyt" />
@@ -759,6 +763,7 @@
     <string id="iFPkhVGe" text="{.Muzcynski}Maleńki Płoski Trochkutny Ščyt" />
     <string id="Ita1lG33" text="{.Muzcynski}Skurany Złučany Ščyt-Kropla" />
     <string id="jAbn05Vg" text="{.Muzcynski}Prosty Ščyt-Kropla Końnika" />
+    <string id="jdOu5l5D" text="{.Muzcynski}Uzmocnieny Listavy Ščyt-Kropla" />
     <string id="jqWBGBo7" text="{.Muzcynski}Uzmocnieny Maleńki Ščyt Vieršnika" />
     <string id="JzZJpbTB" text="{.Muzcynski}Uzmocnieny Tarč" />
     <string id="kNDbSy6K" text="{.Muzcynski}Uzmocnieny Ščyt-Kropla Vieršnika" />
@@ -780,6 +785,7 @@
     <string id="przGGaVm" text="{.Muzcynski}Bronzavy Uzmocnieny Horny Vielizarny Ščyt" />
     <string id="QcKpipVr" text="{.Zanocy}Adarha" />
     <string id="QodawBSN" text="{.Muzcynski}Žalezny Kruhły Ščyt" />
+    <string id="T3SFANYK" text="{.Muzcynski}Družynny Ščyt-Kropla" />
     <string id="RddFH0BA" text="{.Muzcynski}Žalezny Ablamavany Vielizarny Kruhły Ščyt" />
     <string id="rF7Xm7C0" text="{.Muzcynski}Ciažki Trochkutny Ščyt" />
     <string id="txgUxMYw" text="{.Muzcynski}Trochkutny Ščyt z Vyrazam" />
@@ -803,6 +809,7 @@
     <string id="567zyLq5" text="{.Mnozny}Aćvierdžanyja Šypavanyja Skuranyja Naplečniki" />
     <string id="5gsp0xUN" text="{.Zanocy}Kolcakalčužnyja Abarona Plačej" />
     <string id="5uqExwWb" text="{.Nijaki}Lasnoje Futravaje Pokryva" />
+    <string id="6CMYwYai" text="{.Zanocy}Černienaja Šapka" />
     <string id="9w40yGlZ" text="{.Zanocy}Skuranaja Abarona Plačej" />
     <string id="aChUcrRt" text="{.Zanocy}Łuskataja Achova Plačej" />
     <string id="AHQQp0O0" text="{.Muzcynski}Skurany Łamielarnaja Abarona Plačej" />
@@ -887,6 +894,7 @@
     <string id="5dQdBOTa" text="{.Zanocy}Sparynhavaja Siakiera Hałohejča" />
     <string id="89bCqb0Z" text="{.Muzcynski}Plecieny Kvadratny Turnirny Ščyt" />
     <string id="8WlRREMh" text="{.Zanocy}Sparynhavaja Siakiera z Bambukavaj Ručkaj" />
+    <string id="AB2lD2JQ" text="{.Muzcynski}Sparynhavy Mienavlijon" />
     <string id="APO9YcBv" text="{.Zanocy}Sparynhavaja Dvuchručnaja Siakiera" />
     <string id="B0E6Zfyk" text="{.Mnozny}Sparynhavyja Drotyki" />
     <string id="BACi0kaM" text="{.Nijaki}Sparynhavaje Zazubranaje Kapjo" />
@@ -915,6 +923,7 @@
     <string id="0e17RZrZ" text="{.Muzcynski}Arbalest" />
     <string id="0lNp3f76" text="{.Zanocy}Hravieravanaja Vuhłavataja Kaskara" />
     <string id="0NLJnGfF" text="{.Mnozny}Prostyja Drotyki" />
+    <string id="0S8k9Hqa" text="{.Muzcynski}Lohki Arbalet Pryhonnaha" />
     <string id="0SpLcthg" text="{.Muzcynski}Horny Šypaty Dubiec" />
     <string id="160aqzPm" text="{.Zanocy}Vajskovaja Brytva" />
     <string id="1bc4kTaz" text="{.Muzcynski}Tamaskinski Stalovy Spafijon" />
@@ -942,10 +951,12 @@
     <string id="62nIvqbA" text="{.Nijaki}Battanijskaje Hornaje Lazo" />
     <string id="6Db7aDbF" text="{.Mnozny}Streły Balisty" />
     <string id="6EWm09LY" text="{.Zanocy}Ranišniaja Zorka" />
+    <string id="6jYzHJjB" text="{.Mnozny}Kajdany" />
     <string id="6hwZwODh" text="{.Zanocy}Hlefa" />
     <string id="6q0nmVtg" text="{.Zanocy}Lasnaja Siakiera" />
     <string id="6QI8X6CY" text="{.Zanocy}Lohkaja Bułava z Dołam" />
     <string id="6WcZ5Tr0" text="{.Muzcynski}Mołat Kavala" />
+    <string id="77GPT2B6" text="{.Muzcynski}Bajavy Cep" />
     <string id="7jH0kuof" text="{.Zanocy}Šypataja Bułava" />
     <string id="7LmUe8fQ" text="{.Muzcynski}Mienavlijon" />
     <string id="7phSQw5i" text="{.Zanocy}Matyka" />
@@ -957,15 +968,16 @@
     <string id="93OHSnEV" text="{.Muzcynski}Upryhožany Doŭhi Bułat" />
     <string id="9EWN9SiT" text="{.Muzcynski}Lohki Šyšpar" />
     <string id="9pD32UdV" text="{.Nijaki}Hornaje Bułava" />
+    <string id="9UB0LF8Z" text="{.Nijaki}Paŭnočnaje Vieršnickaje Kapjo" />
     <string id="9YbFEaZ1" text="{.Muzcynski}Cisavy Łuk" />
     <string id="9ZiUK3JJ" text="{.Muzcynski}Šyroki Dvuchručnik z Šyrokim Dołam" />
     <string id="a10taTGb" text="{.Zanocy}Šabla z Vodciskam Ilva" />
+    <string id="a3WNz6Ci" text="{.Mnozny}Kamiennyja Kuli Praščy" />
     <string id="a47UTuL6" text="{.Zanocy}Sudździa" />
     <string id="A6llHL9s" text="{.Muzcynski}Doŭhi Łuk z Nizinaŭ" />
     <string id="Ag6dujzl" text="{.Nijaki}Kanijskaje Lazo" />
     <string id="aGbTPme1" text="{.Zanocy}Kasa" />
     <string id="AMIdBVZb" text="{.Zanocy}Vydatnaja Stalovaja Spata" />
-    <string id="AOZbTGOS" text="{.Muzcynski}Ksifas" />
     <string id="arBdK7st" text="{.Muzcynski}Prosty Mieč Bastarda" />
     <string id="b88lWWOo" text="{.Zanocy}Vydatnaja Stalovaja Bułava" />
     <string id="b8AgXwbL" text="{.Muzcynski}Šyroki Zbrojny Mieč" />
@@ -974,6 +986,7 @@
     <string id="bcjcw1o9" text="{.Zanocy}Lasnaja Siakiera-Kałun" />
     <string id="bdTQG99v" text="{.Zanocy}Bambukavaja Ručnaja Siakiera" />
     <string id="beVFwINO" text="{.Muzcynski}Draŭlany Mołat" />
+    <string id="bhiVBSge" text="{.Muzcynski}Nož" />
     <string id="Biq7t1xv" text="{.Mnozny}Dalokabojnyja Streły" />
     <string id="bK03bqdA" text="{.Mnozny}Turnirnyja Streły" />
     <string id="bNABNs8O" text="{.Zanocy}Kvadratnaja Trochi Dvuchručnaja Siakiera" />
@@ -993,6 +1006,7 @@
     <string id="dCbrowBV" text="{.Zanocy}Vydatnaja Stalovaja Doŭhaja Kaskara" />
     <string id="DFcMeRdB" text="{.Zanocy}Prostaja Bajovaja Siakiera Hrabiežnika" />
     <string id="DI9P2HDG" text="{.Mnozny}Składzienyja Iholčastyja Streły" />
+    <string id="dkldfSqU" text="{.Muzcynski}Šypavany Cep" />
     <string id="Dj64aJKQ" text="{.Muzcynski}Bil z Hakam" />
     <string id="dkuzrKJF" text="{.Zanocy}Vydatnaja Pika" />
     <string id="DQaV0i5W" text="{.Muzcynski}Žalezny Šyroki Mieč" />
@@ -1006,7 +1020,6 @@
     <string id="EBRG6qbv" text="{.Zanocy}Šlachietnaja Dzida Vieršnika" />
     <string id="EgrNdBct" text="{.Nijaki}Zazubranaje Kidalnaje Kapjo" />
     <string id="ekUvh8Em" text="{.Muzcynski}Kanijski Dvuchručnik" />
-    <string id="elTXYb9f" text="{.Muzcynski}Falks-Nož" />
     <string id="eND6ECxg" text="{.Zanocy}Dzida Katafrakta" />
     <string id="EO7pCu1b" text="{.Muzcynski}Šlachietny Łuk" />
     <string id="ErOLa263" text="{.Zanocy}Pachodnia" />
@@ -1031,7 +1044,6 @@
     <string id="gsGjXj8J" text="{.Muzcynski}Pustelny Doŭhi Mieč" />
     <string id="gYpNILVC" text="{.Zanocy}Kuvałda" />
     <string id="GyYsQlVd" text="{.Zanocy}Upryhožanaja Karotkaja Spata" />
-    <string id="h1jKICdp" text="{.Muzcynski}Prosty Karotki Łuk" />
     <string id="h60wQVVX" text="{.Zanocy}Pika" />
     <string id="H9hzBJz3" text="{.Nijaki}Kapjo dla Praktycy" />
     <string id="ha3rVEzP" text="{.Muzcynski}Rabrysty Zmočany Zbrojny Mieč" />
@@ -1040,7 +1052,6 @@
     <string id="HclLXEaT" text="{.Zanocy}Konskaja Puha" />
     <string id="HECAP8QW" text="{.Muzcynski}Biardyš z Karotkaj Ručkaj" />
     <string id="hN4wE2gG" text="{.Mnozny}Ciažkija Nity" />
-    <string id="HP1GzM8l" text="{.Muzcynski}Vohnieny Zban" />
     <string id="HpdJJO9g" text="{.Zanocy}Spata-Lazo z Kalcavym Navieršam" />
     <string id="hQrLHkaU" text="{.Zanocy}Siakiera-Hałohejča" />
     <string id="hsRwbHSk" text="{.Zanocy}Dzida Mamluka" />
@@ -1085,9 +1096,11 @@
     <string id="ktJ6crBs" text="{.Muzcynski}Šyroki Falkian" />
     <string id="Kv4zAMIh" text="{.Zanocy}Bułava Katafrakta" />
     <string id="kxtSkGju" text="{.Muzcynski}Ambasadar" />
+    <string id="L5i5RgO0" text="{.Zanocy}Vaŭnianaja Prašča" />
     <string id="l69aXkKH" text="{.Mnozny}Šturškovyja Viły" />
     <string id="l9kAJ1Xh" text="{.Nijaki}Hornaje Šyrokaje Lazo" />
     <string id="LAEaH3zB" text="{.Muzcynski}Prosty Lohki Arbalet" />
+    <string id="lbkaoPk6" text="{.Zanocy}Sika" />
     <string id="ljOwXClb" text="{.Muzcynski}Narvieski Tapor" />
     <string id="LVQworUy" text="{.Zanocy}Šyrokaja Kaskara" />
     <string id="lXwaLAYP" text="{.Muzcynski}Vajskovy Mieč z Tamaskinskaj Stali" />
@@ -1106,6 +1119,7 @@
     <string id="NaaM2O2g" text="{.Muzcynski}Vydatny Šyroki Mieč Paŭnočnika z Dołam" />
     <string id="NFT4sLva" text="{.Nijaki}Vysokaje Zmočanaje Kapjo" />
     <string id="NkV2c6YX" text="{.Mnozny}Składzienyja Stepavyja Streły" />
+    <string id="nq26Puio" text="{.Muzcynski}Ciažki Arbalet Pryhonnaha" />
     <string id="nTc20R1R" text="{.Zanocy}Samarobnaja Kuvałda" />
     <string id="o5kKAbRu" text="{.Zanocy}Dzida Rycara" />
     <string id="ObGN145P" text="{.Mnozny}Lasnyja Drotyki" />
@@ -1129,6 +1143,7 @@
     <string id="QLcP8bIs" text="{.Muzcynski}Falks" />
     <string id="QnyD1yWB" text="{.Zanocy}Šyrokaja Siakiera Paŭnočnika" />
     <string id="Qpl5aCb0" text="{.Zanocy}Siakiera Vajara Vieterana" />
+    <string id="qxYDHkKl" text="{.Zanocy}Uzmocnienaja Prašča" />
     <string id="qZOpdQVx" text="{.Muzcynski}Zorny Falkian" />
     <string id="r07M9xbT" text="{.Muzcynski}Ciažki Arbalet" />
     <string id="Rcc0JW6H" text="{.Zanocy}Tamaskinskaja Stalovaja Spata" />
@@ -1166,11 +1181,13 @@
     <string id="v7WQhge3" text="{.Zanocy}Upryhožanaja Šabla" />
     <string id="VAcSEseI" text="{.Muzcynski}Šyroki Zbrojny Mieč z Šyrokim Dołam" />
     <string id="VAO11FSu" text="{.Muzcynski}Tamaskinski Stalovy Dvuchručnik" />
+    <string id="vDfuEQ7M" text="{.Muzcynski}Sturhijski Karotki Łuk" />
     <string id="vDvj5zkG" text="{.Zanocy}Lutaść Vietru" />
     <string id="vmz4vfu5" text="{.Mnozny}Krukavatyja Drotyki" />
     <string id="VP74qdJ3" text="{.Zanocy}Dzida Kursiera" />
     <string id="vPXWpJTP" text="{.Muzcynski}Horny Kinžał" />
     <string id="VucrovFw" text="{.Muzcynski}Hravieravany Pałaš" />
+    <string id="VxRYaOc2" text="{.Muzcynski}Šyroki Skaen" />
     <string id="vXYlLH6L" text="{.Nijaki}Doŭhaje Tamaskinskaje Zmočanaje Kapjo" />
     <string id="Vyw5KNxR" text="{.Nijaki}Karotkaje Kapjo Rušeńnia" />
     <string id="w6EU77OH" text="{.Muzcynski}Stepavy Zahnuty Nazad Łuk" />
@@ -1198,15 +1215,18 @@
     <string id="xYk4953c" text="{.Zanocy}Stalovaja Bułava" />
     <string id="yCvBx27Z" text="{.Nijaki}Zazubranaje Kapjo" />
     <string id="Yd4lmlQp" text="{.Zanocy}Vuzkaja Vydatnaja Stalovaja Kaskara" />
+    <string id="yeQr4RiM" text="{.Mnozny}Vydziaŭbanyja Kuli Praščy" />
     <string id="YGndAhTr" text="{.Nijaki}Uciažaranaje Stepavaje Kapjo" />
     <string id="YGQ6UXCo" text="{.Muzcynski}Horny Palaŭničy Łuk" />
     <string id="YLplNGxb" text="{.Zanocy}Kalradyjskaja Bułava" />
     <string id="YPUDAJDH" text="{.Muzcynski}Harpun" />
     <string id="YrAVxmFn" text="{.Muzcynski}Horny Šyroki Mieč" />
+    <string id="z3brrzJ9" text="{.Zanocy}Splecienaja Prašča" />
     <string id="Z6Ak3H6G" text="{.Muzcynski}Džarejd" />
     <string id="zbsajPMp" text="{.Muzcynski}Vulž" />
     <string id="zBUT90xQ" text="{.Zanocy}Tamaskinskaja Stalovaja Kaskara" />
     <string id="Zcaucj4W" text="{.Zanocy}Upryhožanaja Zbrojny Mieč" />
+    <string id="ZDZR5UzN" text="{.Mnozny}Śvincovyja Kuli Praščy" />
     <string id="ZeU1fvdz" text="{.Zanocy}Hruda Bujnaj Karciečy" />
     <string id="ZFwKlHIJ" text="{.Muzcynski}Lasny Doŭhi Łuk" />
     <string id="zH0QF7mE" text="{.Nijaki}Hierbavaje Kapjo z Vystupam i Rušami" />
