--- a/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYc/SandBoxCore/std_spnpccharacters_xml_by.xml
+++ b/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYc/SandBoxCore/std_spnpccharacters_xml_by.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <base xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema" type="string">
+
+
+
   <strings>
     <string id="0gi5Fp8c" text="Сястра Мяча Ветэран" />
     <string id="0GkJB08d" text="Стургійскі Ахоўнік Караванаў Ветэран" />
@@ -7,11 +10,8 @@
     <string id="1PsLlMaQ" text="Імперскі Эквайт" />
     <string id="1WfDVpya" text="Стургійскі Лучнік" />
     <string id="1zObCG2o" text="Баттанійскі Фіан-Чэмпіён" />
-    <string id="275LD0Gh" text="Працаўнік Майстэрні" />
     <string id="2gUjKT5H" text="Баттанійскі Вершнік" />
     <string id="2HDPaohZ" text="Лясьнік-Дасьведчаны" />
-    <string id="3VosbFR0" text="Вландыйскі Чэмпіён" />
-    <string id="4C4WiTb2" text="Вараг" />
     <string id="5b6KjY5b" text="Вландыйскі Більнік" />
     <string id="5JFkQn5U" text="Хузаіцкі Лучнік-Ветэран Рушэньня" />
     <string id="5VBPoGYO" text="Асэрайскі Лёгкі Лучнік" />
@@ -20,7 +20,6 @@
     <string id="6j9iJMRr" text="Азёрны Пацук-Рэкрут" />
     <string id="6oc7CXbI" text="Асэрайскі Фарыс-Ветэран" />
     <string id="6UFEfIJV" text="Хузаіцкі Капійнічы Пяхотнік" />
-    <string id="79ElOr2x" text="Гандляр Коньмі" />
     <string id="7aRhhGAs" text="Дасьведчаны Бандыт" />
     <string id="7EUhAv8b" text="Гулам" />
     <string id="7WV17e5Q" text="Элітная Найманая Піка" />
@@ -54,7 +53,6 @@
     <string id="bLMGbLF8" text="Натарыус Прапаведніка" />
     <string id="bLq2HXMo" text="Імперскі Ахоўнік Караванаў Ветэран" />
     <string id="BlZK3wDN" text="Агонь" />
-    <string id="bNnQt4jN" text="Каваль" />
     <string id="bNZXcw3q" text="Баттанійскі Прысягацель" />
     <string id="brlJJW5I" text="Стургійскі Салдат" />
     <string id="bTApMxWr" text="Вландыйскі Рыцар Сьцяга" />
@@ -73,8 +71,6 @@
     <string id="cPQx1RXt" text="Стургійскі Узброены Гандляр" />
     <string id="CRzrHomf" text="Стургійскі Дружыньнік" />
     <string id="cSdSSXsO" text="Дзік-Чэмпіён" />
-    <string id="CsjtWt1g" text="Гаспадар Карчмы" />
-    <string id="cte0zSCz" text="Імперскі Супляменьнік" />
     <string id="cZms8Ivb" text="Баттанійскі Высакародны Маладзён" />
     <string id="dfv7E49q" text="Асэрайскі Пляменны Коньнік" />
     <string id="DIt9SuMb" text="Парастак" />
@@ -82,17 +78,12 @@
     <string id="DNsbKR7B" text="Баттанійскі Лясны Бягун" />
     <string id="DxtSIxyZ" text="Элітны Найманы Арбалет" />
     <string id="e8qbF7Ey" text="Імперскі Менавліятан" />
-    <string id="ECxiXTbF" text="Натарыус Рамесьніка" />
     <string id="ehACDRBk" text="Схаваная Пешка" />
     <string id="eHVgfyPH" text="Хузаіцкі Конны Лучнік" />
     <string id="empirepeasantwoman" text="Імперская Вяскоўка" />
     <string id="eYIMQafj" text="Імперскі Цяжкі Коньнік" />
     <string id="f2a1fPca" text="Хузаіцкі Капійнік-Ветэран Рушэньня" />
     <string id="fdaZ3tri" text="Стургійскі Лясьнічы" />
-    <string id="femalebeggar" text="Жабрачка" />
-    <string id="femalechild" text="Дзіцё" />
-    <string id="femaleinfant" text="Немаўлё" />
-    <string id="femaleteenager" text="Падлетак" />
     <string id="fHQ8ifKM" text="Імперскі Навучаны Лучнік" />
     <string id="FrTTT0G1" text="Стургійскі Дружыньнік-Чэмпіён" />
     <string id="g1zvdEE3" text="Асэрайскі Ветэран Пяхотны" />
@@ -124,13 +115,11 @@
     <string id="JGsUtBT3" text="Імперскі Легіянер" />
     <string id="jRFfRZv2" text="Стургійскі Лучнік Рушэньня" />
     <string id="juBPAThy" text="Баттанійскі Ахоўнік Караванаў Ветэран" />
-    <string id="jx8ohENz" text="Броньнік" />
     <string id="KAJKOooN" text="Хузаіцкі Цяжкі Конны Лучнік" />
     <string id="KbyRj9b3" text="Карахузаіцкі Старэйшына" />
     <string id="khuzaitpeasantwoman" text="Хузаіцкая Вяскоўка" />
     <string id="kih9DwL4" text="Вландыйскі Арбалетнік" />
     <string id="KnhpjA7Y" text="Кальман" />
-    <string id="kPCcelVX" text="Гандляр " />
     <string id="kppseK3N" text="Хузаіцкі Пляменны Ваяр" />
     <string id="kyt087eN" text="Межавы Наезьнік Ветэран" />
     <string id="L0cGAnWw" text="Баттанійскі Капійнік Рушэньня" />
@@ -139,22 +128,15 @@
     <string id="LEJukldW" text="Імперскі Узброены Гандляр" />
     <string id="LKb8DXby" text="Баттанійскі Майстар Караванаў" />
     <string id="lkrV8jZa" text="Хузаіцкі Лучнік" />
-    <string id="LNNXiPyV" text="Целаахоўнік Верхавода Банды" />
     <string id="Loc1XOIk" text="Хузаіцкі Паляўнік" />
     <string id="LsHFY6p5" text="Асэрайскі Шарагавы Мамлюк" />
     <string id="lumFaIud" text="Хузаіцкі Улан" />
     <string id="LVEU4se3" text="Стургійскі Капійнік-Ветэран Рушэньня" />
     <string id="lxU4pWsS" text="Баттанійскі Застрэльнік-Ветэран" />
-    <string id="LXybWXde" text="Скальдэрброда-Ваяр" />
-    <string id="malebeggar" text="Жабрак" />
-    <string id="malechild" text="Дзіцё" />
-    <string id="maleinfant" text="Немаўлё" />
-    <string id="maleteenager" text="Падлетак" />
-    <string id="malethug" text="Бандыт" />
+    <string id="LXybWXde" text="Скольдэрбруда-Ваяр" />
     <string id="Mcbjdntz" text="Джаввал Вярблюджы Наезьнік" />
     <string id="MDIuyBHP" text="Хузаіцкі Капійнік Рушэньня" />
     <string id="mrBbsiPN" text="Воўк-Маладзён" />
-    <string id="muu5cofb" text="Гараджанін" />
     <string id="MYwUFMsz" text="Імперскі Элітны Катафракт" />
     <string id="n41jlEa3" text="Імперскі Вігла-Рэкрут" />
     <string id="n89z19Dv" text="Найманая Піка" />
@@ -171,7 +153,6 @@
     <string id="pooybAKI" text="Вландыйскі Мечнік" />
     <string id="pRbbJHkU" text="Імперскі Бучэлары" />
     <string id="PU2zIMu0" text="Лялькавод" />
-    <string id="pzKCIEaK" text="Вландыйскі Супляменьнік" />
     <string id="pzmgMODE" text="Стургійскі Ахоўнік Караванаў" />
     <string id="q7b4pQc9" text="Загартаваны Воўк" />
     <string id="q7VeZazL" text="Баттанійскі Застрэльнік" />
@@ -188,7 +169,6 @@
     <string id="qMYpZKWo" text="Прынцыпі" />
     <string id="QvSmhaAV" text="Абраны Воўк" />
     <string id="r8npO8hG" text="Пасьлядоўніца Сястрынства" />
-    <string id="reoVAtrE" text="Натарыус Гандляра" />
     <string id="rIqwYlSK" text="Хузаіцкі Качэўнік" />
     <string id="riT39wKu" text="Флянс" />
     <string id="RJNNsaSP" text="Стургійскі Разбойнік" />
@@ -206,7 +186,6 @@
     <string id="SvAADOwm" text="Вландыйскі Арбалетнік-Заклічнік" />
     <string id="TbBnWiao" text="Імперскі Ахоўнік Караванаў" />
     <string id="TCuNAyPG" text="Асэрайскі Мамлюк-Вершнік" />
-    <string id="thbcgVVO" text="Гандляр" />
     <string id="THOfB9DZ" text="Хузаіцкі Ахоўнік Караванаў" />
     <string id="THyv3q9f" text="Імперскі Арбалетнік-Сяржант" />
     <string id="tIDOJvId" text="Асэрайскі Мамэлюк-Вартаўнік" />
@@ -214,10 +193,8 @@
     <string id="tL6aGah4" text="Асэрайскі Лучнік-Ветэран Рушэньня" />
     <string id="TpECDErA" text="Імперскі Майстар Караванаў" />
     <string id="tSc0mHy7" text="Баттанійскі Абраны Ваяр" />
-    <string id="twCIejxn" text="Майстар Гульняў" />
     <string id="u0UNwnw2" text="Імперскі Катафракт" />
     <string id="u3K1SozQ" text="Дрэва" />
-    <string id="UaN2lfwi" text="Збройнік" />
     <string id="UBHngTIf" text="Найміт-Булаўнік" />
     <string id="uca778lM" text="Рэкрут Бэні Зілал" />
     <string id="uDseaKcb" text="Стургійскі Майстар Караванаў" />
@@ -227,7 +204,7 @@
     <string id="uPypJHlm" text="Элітны Найміт-Булаўнік" />
     <string id="UrSjhs4x" text="Вландыйскі Вульжар" />
     <string id="UsvCnAS7" text="Полымя" />
-    <string id="uViDMxLC" text="Скальдэр-Рэкрут" />
+    <string id="uViDMxLC" text="Скольдэр-Рэкрут" />
     <string id="UvK3XaZ6" text="Карахергіцкі Наезьнік" />
     <string id="UYPaQP2j" text="Хузаіцкі Канклі" />
     <string id="uzwfybTH" text="Хузаіцкі Пяхотны" />
@@ -239,30 +216,24 @@
     <string id="VqrQ096u" text="Хузаіцкі Хешыг" />
     <string id="VtlvxEs7" text="Баттанійскі Ваяр Клану" />
     <string id="vxlAJIiU" text="Джаввал-Рэкрут" />
-    <string id="W2WXkiAh" text="Пасярэднік-Выкупнік" />
     <string id="w6YwFaG7" text="Хузаіцкі Капійнік" />
     <string id="WEHDGbEE" text="Хузаіцкі Майстар Караванаў" />
-    <string id="WH7EGGIg" text="Цырульнік" />
     <string id="wrYJBc4g" text="Асэрайскі Палацавы Мамлюк-Вартаўнік" />
     <string id="wtmCSMrC" text="Асэрайскі Пяхотнік" />
     <string id="X12lazIs" text="Вландыйскі Узброены Гандляр" />
-    <string id="X3KYysuv" text="Танцор" />
     <string id="X4GvzDdW" text="Баттанійскі Фальксман" />
     <string id="X6CQ9CMZ" text="Вландыйскі Трапны Стралок" />
-    <string id="XgjXfmM1" text="Вартаўнік Вязьніцы" />
     <string id="xJ4koSsx" text="Іскра" />
     <string id="xl6QstMW" text="Межавы Наезьнік" />
     <string id="xnzpQbwQ" text="Стургійскі Конны Налётнік" />
     <string id="XzDObEiH" text="Вландыйскі Зброянос" />
     <string id="YE4RGuzU" text="Вландыйскі Ахоўнік Караванаў Ветэран" />
     <string id="yG42k5GC" text="Асэрайскі Ахоўнік Караванаў" />
-    <string id="YGexslSX" text="Скальдэрброда-Ветэран" />
+    <string id="YGexslSX" text="Скольдэрбруда-Ветэран" />
     <string id="yhBagy1Y" text="Асэрайскі Лучнік" />
     <string id="yMqWnBfT" text="Баттанійскі Фальксман-Ветэран" />
     <string id="yPF32fbh" text="Вландыйскі Пехацінец" />
     <string id="yrGYZsQ7" text="Імперскі Пяхотнік-Ветэран" />
-    <string id="z6RMWTaA" text="Пакаёўка Карчмы" />
-    <string id="zfCoeglY" text="Музыка" />
     <string id="ZhKoCVby" text="Імперскі Капійнік Рушэньня" />
     <string id="ZK0GXYCx" text="Сястра Мяча" />
     <string id="ZKuabzhK" text="Хузаіцкі Шляхетны Сын" />
