--- a/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYl/Native/std_module_strings_xml_by.xml
+++ b/пераклады гульні/v1.3.1/Belarusian.Core/ModuleData/Languages/BYl/Native/std_module_strings_xml_by.xml
@@ -204,7 +204,7 @@
     <string id="7j4fQHg7" text="Lasnaja Bitva{newline}{newline}• Piachota atrymlivaje maleńki bonus.{newline}• Łučniki atrymlivajuć siaredni štraf.{newline}• Vieršnica atrymlivaje vialiki štraf.{newline}• Konnyja Łučniki atrymlivajuć luty štraf." />
     <string id="7JpAR59k" text="Užyvajecca dla pieravozki hruzaŭ" />
     <string id="7llkDelg" text="Pastanovy Haspadarstva" />
-    <string id="7mRN2br0" text="Lidarstva nad pabudovaj pieradadziena {HERO_NAME}." />
+    <string id="7mRN2br0" text="Lidarstva nad farmavańniem pieradadziena da {HERO_NAME}." />
     <string id="7MSuWxaY" text="{CHILD.NAME} {?CHILD.GENDER}dasiahnuła{?}dasiahnuŭ{\?} {CHILD.AGE} hadoŭ i maje patrebu ŭ radzie." />
     <string id="7MWaMaez" text="Voś što my majem: {ITEM_LIST}. Zabirajcie hetaje, ale pakińcie našyja žyćci." />
     <string id="7oJ9gIeT" text="U handlara brakuje hrošaŭ." />
@@ -233,7 +233,7 @@
     <string id="8bSHlWBL" text="U hetym horadzie zaraz nie prachodziać turniry." />
     <string id="8c8NDpAd" text="{HERO.NAME} {?HERO.GENDER}atrymała{?}atrymaŭ{\?} asablivaść {TRAIT_NAME}." />
     <string id="8cY08v3s" text="Hetaja vioska siaredniaha bahaćcia. Ludzi i žyvioły vyhladajuć sytymi. Viaskoŭcy rupliva vykonvajuć siezonnuju pracu. " />
-    <string id="8fLMcFFG" text="{DAY_OF_YEAR} {YEAR} hodu. Vy razharnuli ściah cmoka i abviaścili svaju misiju pa {?PLAYER_WANTS_RESTORE}adnaŭleńniu{?}razbureńniu{\?} Impieryi." />
+    <string id="8fLMcFFG" text="{DAY_OF_YEAR} {YEAR} hodu. Vy razharnuli cmačyny ściah i abviaścili svoj namier {?PLAYER_WANTS_RESTORE}adnavić{?}razburyć{\?} Impieryi." />
     <string id="8geYNpC9" text="{THRUST_DAMAGE_TYPE} Škoda Snarada:" />
     <string id="8Gh3Waa3" text="žonka" />
     <string id="8iLzK3Y4" text="Prybytak Karavana i Partyi" />
@@ -264,7 +264,7 @@
     <string id="9FhdRKWu" text="Kidalny Nož" />
     <string id="9gNjg4P0" text="Heta nie zachavaje vašuju hulniu, ale viernie vas u hałoŭnaje mieniu. Vy ŭpeŭnieny, što žadajecie vyjści?" />
     <string id="9iycVtyV" text="Chutkaść Vyvučeńnia: x {COUNT}" />
-    <string id="9Lhd2zVW" text="{DAY_OF_YEAR} {YEAR} hodu. Vy znajšli trećciu častku Ściaha Cmoka i hatovy razharnuć jaho znoŭ." />
+    <string id="9Lhd2zVW" text="{DAY_OF_YEAR} {YEAR} hodu. Vy znajšli trećciu častku Cmačynaha Ściaha i hatovy razharnuć jaho znoŭ." />
     <string id="9NjDfz5Z" text="({LEFT} / {RIGHT})" />
     <string id="9PLNQrWw" text="Vy čujecie mała skarhaŭ, i ludzi, zdajecca, daviarajuć uładam." />
     <string id="9pwIt4aa" text="Vosk{@Plural}adzinak vosku{\@}" />
@@ -346,7 +346,7 @@
     <string id="AtulqwTG" text="Źmianić Lidara Partyi" />
     <string id="AUDv8sEt" text="Aktyŭnaja Prablema" />
     <string id="aUNYlvbN" text="Vy prybyli ŭ viosku {SETTLEMENT}, kab razrabavać jaje. Niekatoryja žychary sabralisia, kab dać adpor." />
-    <string id="AUOio5Tu" text="Štodzionnaje Pradvyznačanaje" />
+    <string id="AUOio5Tu" text="Štodzionny Zaniatak" />
     <string id="AVQUGwTg" text="Horad siaredniaha bahaćcia." />
     <string id="AWW0T6xR" text="Pieška moža pierasoŭvacca artahanalna na adnu plitku za raz.{newline}Piešku nielha pierasunuć nazad na plitku, ź jakoj jana pryjšła ŭ papiaredni krok.{newline}Kali hulec nia moža ruchacca, jon moža prybrać adnu z piešak apanienta i ŭsio adno zrabić krok." />
     <string id="aY2SKxqG" text="Rabujcie ich vioski!" />
@@ -411,7 +411,7 @@
     <string id="bNoCJyi9" text="Šlachietnaść" />
     <string id="bO5kjF3G" text="Sumlennaść:" />
     <string id="BObPGFCw" text="Uziać i Ekipijavać" />
-    <string id="bPCAdgLs" text="Abiarycie pabudovu, kab uznačalić" />
+    <string id="bPCAdgLs" text="Abiarycie farmavańnie, kab uznačalić" />
     <string id="BPVFAl7J" text="Našy płan - atakavać usimi siłami kala našaj piachoty." />
     <string id="BPVmRxrA" text="Sfarmavać Chaŭrus z {FACTION}" />
     <string id="bPXvukDs" text="Ruch i Zachop" />
@@ -546,7 +546,7 @@
     <string id="dxtuFW8b" text="Vy niadrenna pabilisia. Pakazali niekalki dobrych chadoŭ. Zrazumieła, ździejśnili niekalki pamyłak, ale, peŭna, padajacie nadzieju. I zasłužyli ŭznaharodu {PRIZE}{GOLD_ICON} za pieramohu nad {OPPONENT_COUNT} apanientami." />
     <string id="DyarV8i7" text="Hetaja palityka ŭžo maje prapanavanuju pastanovu." />
     <string id="dyLYsWPf" text="Bonus Pieravahi Zabieśpiačeńnie Najaŭnaści" />
-    <string id="dyY3hkH1" text="{TROOP_NAMES_BEGIN}{?IS_PLURAL} i {?}{\?}{TROOP_NAMES_END} atakujuć {?IS_PLURAL}roznyja varožyja pabudovy{?}varožuju pabudovu{\?}." />
+    <string id="dyY3hkH1" text="{TROOP_NAMES_BEGIN}{?IS_PLURAL} i {?}{\?}{TROOP_NAMES_END} atakujuć {?IS_PLURAL}roznyja varožyja farmavańni{?}varožaje farmavańnie{\?}." />
     <string id="Dzntsudy" text="Vy nanieśli {AMOUNT} {DAMAGE_TYPE} škody {VICTIM_NAME} ({LOST_HP_PERCENTAGE}% ačkoŭ udaru)." />
     <string id="E05lmb5n" text="Vašyja adnosiny z {HERO_NAME} buduć &lt;a style=&quot;DecreaseStyle&quot; &gt;&lt;b&gt;pahoršany&lt;/b&gt;&lt;/a&gt;" />
     <string id="E0lb2Z2r" text="{DAY_OF_YEAR} {YEAR} hodu. Zmovie suprać Impieryi udałosia zjadnać svaich vorahaŭ, vojski haspadarstvaŭ {FACTION_NAMES} pačali vajavać razam." />
@@ -755,12 +755,12 @@
     <string id="hE4XvvXv" text="Sartavać pa:" />
     <string id="HEQ2zEei" text="Skasavać" />
     <string id="HEUDyfbG" text="{HERO.NAME} dałučajecca da {CLAN_NAME}" />
-    <string id="hEWuE0Ch" text="Vy kamandzir, tamu zmožacie zahadvać usim pabudovam padčas boju." />
+    <string id="hEWuE0Ch" text="Vy kamandzir, tamu možacie zahadvać usim farmavańniam padčas boju." />
     <string id="hfSW9FTN" text="Zbroja Dalokaha Boju V" />
     <string id="hJypvWMR" text="Palepšyć" />
     <string id="HKrCB1Pa" text="Moža Prabivać Błok" />
     <string id="HkZ4E94O" text="Kanfiederacyja stepavych plamionaŭ Chuzaitaŭ raniej viała kačavy ład žyćcia, ale niadaŭna pasialiłasia na ŭschodniaj miažy Impieryi i pastupova pieratvarajecca ŭ ahrarnaje hramadstva sa stałymi centrami-haradami. Niahledziačy na hetaje, jany pa-raniejšamu zachoŭvajuć šmatlikija aśpiekty svajho kačavoha žyćcia, u tym liku blizkaść da kaniej. Jany majstry konnaj stralby z łuka, stralajučy i ŭciakajučy z zony dasiahalnaści." />
-    <string id="hL3JIQbd" text="Uznačalić hetuju pabudovu ŭ boi." />
+    <string id="hL3JIQbd" text="Uznačalić hetaje farmavańnie ŭ boi." />
     <string id="Hlusn1gG" text="Nazva kłana ŭtrymlivaje niedapuščalnyja znaki." />
     <string id="HmbvM9Na" text="Žadajecie prapuścić ciapierašni matč?" />
     <string id="HMgrtLYa" text="Vašy čempijon prajhraŭ duel. Vašaje vojska rasčaravana hetaj parazaj. Vašaja partyja hublaje maral." />
@@ -810,7 +810,7 @@
     <string id="IF7zS5ia" text="Vy pieravysili limit pałonnych.{newline}Časova vy zmožacie ŭtrymlivać svaich pałonnych, ale praz peŭny čas jany pačnuć chutka źbiahać z vašaj partyi. Taksama vy budziecie zapavoleny.{newline}Vy ŭpeŭnieny?" />
     <string id="iffbWGBa" text="Ciotka" />
     <string id="iFg5N7r3" text="Adnaručnaja Zbroja" />
-    <string id="ihVHfUFT" text="Pabudova" />
+    <string id="ihVHfUFT" text="Farmavańnie" />
     <string id="iIBqTcKx" text="Ataki mohuć źbivać z noh vorahaŭ" />
     <string id="iisvVbDI" text="Kupić usio" />
     <string id="IiyN5krb" text="{TRAIT_NAME} ({TRAIT} {TRAIT_VALUE}){newline}{TRAIT_DESCRIPTION}" />
@@ -921,7 +921,7 @@
     <string id="kHC5EjEJ" text="Bonus Małoj Frakcyi" />
     <string id="Khr5yETv" text="Aserai - žychary pustelni Nachasa, sumieś kačavych bieduinaŭ i asiełych ziemlarobaŭ z aazisaŭ. Jany viadomyja svaim majsterstvam konnaj jazdy i viedami šmatlikich krain, asabliva miedycynaj, atrymanymi dziakujučy znachodžańniu na samych prybytkovych handlovych šlachach kantynienta. Kožny kłan luta hanarycca svaim pachodžańniem i časta zajzdrościć inšym, ale kali ich jadnaje charyzmatyčny lidar, jany robiacca hałoŭnaj siłaj na poŭdni." />
     <string id="KiVCv1Bx" text="Biare ŭ abłohu {SETTLEMENT_NAME}" />
-    <string id="KJDqOGEU" text="Našy płan - viarnucca ŭ pabudovy, kab zmahacca ŭ inšy dzień." />
+    <string id="KJDqOGEU" text="Našy płan - viarnucca da farmavańnia, kab zmahacca ŭ inšy dzień." />
     <string id="KkaVpLXd" text="Abmierkavać pryniaćcie hetaj palityki (Padtrymka: {SUPPORT}%)" />
     <string id="KkwLUO3o" text="šosty" />
     <string id="klZnvb15" text="Piersanaž" />
@@ -1390,7 +1390,7 @@
     <string id="Svem1NiV" text="Vašy apanient źnieprytomieŭ, i vy pieramahli!" />
     <string id="svnxJA0L" text="{HERO} nia maje dastatkovaha {SKILL} navyku, kab stvaryć hetuju zbroju." />
     <string id="switchToNextElement" text="Pieraklučyć" />
-    <string id="SwY4YLMY" text="Ściah Cmoka znoŭ vysoka raźvivajecca." />
+    <string id="SwY4YLMY" text="Cmačyny Ściah znoŭ vysoka raźvivajecca." />
     <string id="SydDh9jf" text="Vy atrymali {COUNT} {ITEM} ad {HERO.NAME}." />
     <string id="SYm7rgCX" text="{COMPANION.LINK} {?COMPANION.GENDER}pakinuła{?}pakinuŭ{\?} vašuju partyju." />
     <string id="szSjkkyl" text="My pavinny abrać nastupny abjekt." />
@@ -1669,7 +1669,7 @@
     <string id="YMIFqVOk" text="Vy ŭpeŭnieny, što žadajecie zdacca? Usie vašyja vajary buduć stračanyja!" />
     <string id="YNND0kc9" text="Abaronienyja Dzidy z Krukami" />
     <string id="yNyQ3RFa" text="{HERO.NAME} pamierła pry rodach." />
-    <string id="yOJAiSf4" text="Biez pabudovy" />
+    <string id="yOJAiSf4" text="Biez Farmavańnia" />
     <string id="YOSEIvyf" text="Kirujemaść: " />
     <string id="yQiDdDPY" text="Lohki Koń" />
     <string id="yRQDL2ab" text="Harnizon:" />
@@ -1686,7 +1686,7 @@
     <string id="yVLv2Q23" text="Dziejać" />
     <string id="YvwQL9aa" text="Vaha: " />
     <string id="yWD4Nwy2" text="My musim dapamahčy našym chaŭruśnikam." />
-    <string id="YxEcX6pS" text="{DAY_OF_YEAR} {YEAR} hodu. Vy znajšli druhuju častku Ściaha Cmoka Kalradyjosa." />
+    <string id="YxEcX6pS" text="{DAY_OF_YEAR} {YEAR} hodu. Vy znajšli druhuju častku Cmačynaha Ściaha Kalradyjosa." />
     <string id="YxKHEUEX" text="Turnir skončany. {TOURNAMENT_FINAL_PARTICIPANT_A} {?TOURNAMENT_FINAL_PARTICIPANT_A.GENDER}pieramahła{?}pieramoh{\?} {TOURNAMENT_FINAL_PARTICIPANT_B} u finalnym raŭndzie. Vy vybyli ŭ raŭndzie {TOURNAMENT_ELIMINATED_ROUND}." />
     <string id="YYdPfXEP" text="Tabłut - heta hulnia napadnikaŭ (čornych) suprać abaroncaŭ (biełych).{newline}Napadnikaŭ bolej, čym abaroncaŭ, ale abaroncam dla pieramohi nia treba zachoplivać. Ich asnoŭnaja meta - zaścierahčy svajho haspadara (centralnuju piešku).{newline}Haspadar hulaje pa tym ža praviłam ruchu i ŭziaćcia, što i inšyja pieški." />
     <string id="YYvzM5Dh" text="Skinuć Usio" />
